--- a/HW1123/06_陳嘉祥/CH09.04_Q11.md
+++ b/HW1123/06_陳嘉祥/CH09.04_Q11.md
@@ -4,3 +4,42 @@ Title: HW1123_06_Titan(陳嘉祥)
 
 ![CH09 04_Q11](https://github.com/user-attachments/assets/bdeda189-89dc-4582-b136-4a510b67df18)
 
+由題目得知：在那些被診斷為早期乳腺癌的女性中，其中有三分之一最終會死於該病。 
+
+假設一項乳腺癌早期檢測計劃已啟動，目的是提高被診斷為該病的女性的生存率 P。  
+
+從進行了篩查的200名被診斷為乳腺癌的女性中，隨機抽取了一個樣本，記錄了有多少人最終存活下來，設 x 為樣本中存活的女性數量。 
+
+### a. 如果希望判斷篩查計劃是否有效，應檢驗的對立假設是什麼？ 
+
+$$H_0$$ : P $$\le $$ 0.6667 
+ 
+$$H_a$$ : P > 0.6667 (右尾檢定 ; P代表早期檢測的存活率)  
+
+### b. 說明虛無假設。 
+
+虛無假設是本研究想要推翻的假設，所以令虛無假設為進行早期檢測的女性存活率會低於2/3。
+
+### c. 如果在樣本中有 164 名女性生存，是否可以得出篩查計劃有效的結論？ 
+
+### 使用 α=0.05 進行檢驗，並解釋檢驗的實際結論。
+
+已知條件 : n=200, $$\hat{P} =0.82 $$, n*p=164 且 n*(1-p)=36 $$\ge $$ 5，故可採用Z分配進行檢定。   
+ 
+右尾檢定，故 $$\alpha $$ = 0.05 ，查表得到Z=1.645  
+
+Z = $$\frac{\hat{p} - p_0}{\sqrt{\frac{p_0 q_0}{n}}} $$ = $$\frac{0.82 - 0.6667}{\sqrt{\frac{0.6667 * 0.3333}{200}}} $$ 
+
+= 4.6 > 1.645      
+
+因為Z檢定量落入Rejection Region，故拒絕 $$H_{0} $$ 。   
+
+
+### d. 計算檢驗的 p-value 並解釋其含義。
+
+P-Value = P( Z > 4.6 )，查表得到 : P( Z > 4.6 ) = 0 < $$\alpha=0.05 $$。 
+
+因為P-Value < $$\alpha $$，故拒絕 $$H_{0} $$ 。   
+
+解釋: 因為P-Value 小於0.05，故有足夠/充份的證據顯示早共檢測的女性存活率大於2/3。
+
