--- a/HW1123/15_林秀鴻/CH09.02_Q08-10.md
+++ b/HW1123/15_林秀鴻/CH09.02_Q08-10.md
@@ -21,7 +21,7 @@ Q8 . 左尾檢定，顯著水準 α=0.01 ，***P = 0.008 < α=0.01 → Reject H0
 
  
 
-Q9 . 左尾檢定，顯著水準 α=0.05 ，**P = 0.008 > α=0.05 → Reject H0
+Q9 . 左尾檢定，顯著水準 α=0.05 ，**P = 0.008 < α=0.05 → Reject H0
 
 
 在該顯著水準下拒絕該虛無假說。
@@ -31,7 +31,7 @@ Q9 . 左尾檢定，顯著水準 α=0.05 ，**P = 0.008 > α=0.05 → Reject H0
 ![image](https://github.com/user-attachments/assets/9ece5f98-1bf1-4d34-8b1e-b3764506c213)
 
 
-Q10.  雙尾檢定，顯著水準 α=0.02 ，***P = 0.008 > α/2=0.01 → Reject H0
+Q10.  雙尾檢定，顯著水準 α=0.02 ，***P = 0.008*2 < α→ Reject H0
 
 在該顯著水準下拒絕該虛無假說。
 
