--- a/HW1123/14_陳偉豪/CH09.02_Q08-Q10.md
+++ b/HW1123/14_陳偉豪/CH09.02_Q08-Q10.md
@@ -3,9 +3,8 @@
 #### 8.  
 左尾檢定 $\alpha = 0.01$  
 $z = -2.41 $  
-$p-value(z<-2.41) = 0.008 $  
-$0.008 < 0.01 \Rightarrow p < \alpha $  
-拒絕 $H_0$  
+$\alpha = 0.01$ 的拒絕域為 $z<-2.33$  
+因為統計量落在拒絕域,故拒絕 $H_0$  
 
 #### 9.  
 左尾檢定 $\alpha = 0.05$  
