--- a/HW1123/06_陳嘉祥/CH09.02_Q23.md
+++ b/HW1123/06_陳嘉祥/CH09.02_Q23.md
@@ -7,7 +7,7 @@ Title: HW1123_06_Titan(陳嘉祥)
 ### a. 如果你是質量控制經理，並希望確保每包絞肉的平均重量確實是1磅，你會做那些假設檢定？
 $$H_0$$ : $$\mu$$ = 1 
 
-$$H_a$$ : $$\mu\ne$$ 1 
+$$H_a$$ : $$\mu\ne$$ 1  (雙尾檢定)
 
 
 ### b. 計算 p 值並用它來執行假設檢定。
