--- a/HW1123/13_陳峻毅/CH09.02_Q08-10.md
+++ b/HW1123/13_陳峻毅/CH09.02_Q08-10.md
@@ -1,5 +1,91 @@
 ![391331082-d0c8c47b-2815-466a-aa0d-1d3190eb5084](https://github.com/user-attachments/assets/ba3e24a6-8889-4ccb-a130-4841b3348bf1)
 
+## 題目 8：左尾檢定，$\alpha = 0.01$
+
+- **拒絕域**：  
+  對於左尾檢定，臨界值 $z_\alpha$ 可從標準常態分布表中查得。當 $\alpha = 0.01$，對應的 $z$ 臨界值為：
+  $z_\alpha = -2.33$
+  因此，拒絕域為：
+  $z \leq -2.33$
+- **檢定統計量**：  
+  給定檢定統計量 $z = -2.41$，落入拒絕域，因為 $-2.41 < -2.33$。
+
+- **結論**：  
+  拒絕虛無假設（$H_0$）。
+
+- **信賴度**：  
+  計算 $p$ 值：
+  $$
+  p = P(Z \leq -2.41) \approx 0.0079
+  $$
+  因為 $p < \alpha = 0.01$，結論具有高度可靠性。
+
+---
+
+## 題目 9：左尾檢定，$\alpha = 0.05$
+
+- **拒絕域**：  
+  當 $\alpha = 0.05$，對應的 $z$ 臨界值為：
+  $$
+  z_\alpha = -1.645
+  $$
+  因此，拒絕域為：
+  $$
+  z \leq -1.645
+  $$
+
+- **檢定統計量**：  
+  $z = -2.41$ 落入拒絕域，因為 $-2.41 < -1.645$。
+
+- **結論**：  
+  拒絕虛無假設（$H_0$）。
+
+- **信賴度**：  
+  計算 $p$ 值：
+  $$
+  p = P(Z \leq -2.41) \approx 0.0079
+  $$
+  因為 $p < \alpha = 0.05$，結論具有可靠性。
+
+---
+
+## 題目 10：雙尾檢定，$\alpha = 0.02$
+
+- **拒絕域**：  
+  雙尾檢定中，將 $\alpha$ 平分於兩尾，每尾的 $\alpha = 0.01$。因此，臨界值為：
+  $$
+  z_\alpha = \pm 2.33
+  $$
+  拒絕域為：
+  $$
+  z \leq -2.33 \quad \text{或} \quad z \geq 2.33
+  $$
+
+- **檢定統計量**：  
+  $z = -2.41$ 落入拒絕域，因為 $-2.41 < -2.33$。
+
+- **結論**：  
+  拒絕虛無假設（$H_0$）。
+
+- **信賴度**：  
+  計算 $p$ 值（雙尾檢定）：
+  $$
+  p = 2 \times P(Z \leq -2.41) \approx 2 \times 0.0079 = 0.0158
+  $$
+  因為 $p < \alpha = 0.02$，結論具有可靠性。
+
+---
+
+
+
+
+
+
+
+
+
+
+
 題目 8：左尾檢定，α=0.01
 
     左尾檢定的假設如下：
