--- a/HW1123/HW1123Q09.md
+++ b/HW1123/HW1123Q09.md
@@ -25,7 +25,7 @@ $$
 
 ## (c) 拒絕域與結論
 
-   - 左側檢定，significance level 顯著水準 $\alpha = 0.05$。
+   - 左尾檢定，significance level 顯著水準 $\alpha = 0.05$。
    - 對應標準常態分布的Critical Value臨界值為 $Z(critical) = -1.645$。
 
    - 由於 $Z(STAT) = -1.77 < Z(critical) = -1.645$，拒絕 Ho
