--- a/HW1123/HW1123Q13.md
+++ b/HW1123/HW1123Q13.md
@@ -39,7 +39,7 @@ $\alpha = 0.05 $
 
 因平均值可能大於74或小於74，將 $\alpha = 0.05$ 平均分配在雙尾，為 $\alpha/2 = 0.025$
 
-![image](https://github.com/user-attachments/assets/a30f940b-5d62-47af-acdd-5f9ab680e106)
+![image](https://github.com/user-attachments/assets/84bbead8-ac7a-4c11-acd3-60abdc076f64)
 
 
 自由度為n -1 = 25-1 = 24
@@ -62,7 +62,7 @@ $t_{0.025} \leq t \leq t_{0.025}$ = $-2.064 \leq t \leq 2.064 $
 
 t = $\frac{(69.7-74)}{16/ \sqrt{25}}$ = -1.3438
 
-## Step 6 解釋
+## Step 6 結論
 
 因統計量落在接受域中，因此無法拒絕 $H_0$
 
