--- a/HW1123/06_陳嘉祥/CH09.02_Q23.md
+++ b/HW1123/06_陳嘉祥/CH09.02_Q23.md
@@ -22,4 +22,4 @@ P-Value=P(Z>| $$z_{0}$$ |)= 2 * P(Z>| $$\frac{1.01 - 1}{0.18/\sqrt{35}} $$ |) = 
 
 ### c. 如何向消費者利益小組報告你的研究結果？
 
-「根據對 35 個隨機抽樣包裝的分析，碎牛肉的平均重量為 1.01 磅，略高於設計重量 1 磅。然而，統計檢驗表明，此差異不具有統計顯著性 。因此，我們沒有足夠的證據推翻包裝重量偏離平均重量1磅。」
+「根據對 35 個隨機抽樣包裝的分析，碎牛肉的平均重量為 1.01 磅，略高於設計重量 1 磅。然而，統計檢驗表明，此差異不具有統計顯著性 。因此，我們沒有足夠的證據來推翻包裝平均重量為1磅。」
