--- a/HW1123/HW1123Q01.md
+++ b/HW1123/HW1123Q01.md
@@ -3,13 +3,13 @@
 ![image](https://github.com/user-attachments/assets/926aac00-e639-4a93-8f0e-c1497a79630e)
 
 
-![image](https://github.com/user-attachments/assets/220920cf-a8f8-4cf8-8485-7b9e842a3f88)
 
 
- z=-2.41 查表得 P = 0.008
+Q8 . 左尾檢定，顯著水準 α=0.01 ，Z=-2.33，若Z小於-2.33則落入拒絕區。
 
+Z=-2.41落入拒絕區
 
-Q8 . 左尾檢定，顯著水準 α=0.01 ，***P = 0.008 < α=0.01 → Reject H0
+<img width="547" alt="image" src="https://github.com/user-attachments/assets/1bfe7f8e-c95d-416a-a618-d8e77cd7369f">
 
  
 
