--- a/HW1123/14_陳偉豪/CH09.02_Q08-Q10.md
+++ b/HW1123/14_陳偉豪/CH09.02_Q08-Q10.md
@@ -9,13 +9,14 @@ $\alpha = 0.01$ 的拒絕域為 $z<-2.33$
 #### 9.  
 左尾檢定 $\alpha = 0.05$  
 $z = -2.41 $  
-$p-value(z<-2.41) = 0.008 $  
-$0.008 < 0.05 \Rightarrow p < \alpha $  
-拒絕 $H_0$   
+$\alpha = 0.05$ 的拒絕域為 $z<-1.645$  
+因為統計量落在拒絕域,故拒絕 $H_0$  
 
 #### 10.  
 雙尾檢定 $\alpha = 0.02$  
 $z = -2.41 $  
-$p-value(z<-2.41) = 0.008 $  
-$0.008 < 0.02/2=0.01 \Rightarrow p < \alpha /2 $  
-拒絕 $H_0$
+$\alpha = 0.02$ 的拒絕域為 $|z|>z_{\alpha/2}$  
+$|z|>z_{0.01} \Rightarrow |z|>2.33$   
+$|z|=2.41>2.33$  
+因為統計量落在拒絕域,故拒絕 $H_0$  
+
