--- a/HW1123/13_陳峻毅/CH09.02_Q23.md
+++ b/HW1123/13_陳峻毅/CH09.02_Q23.md
@@ -52,4 +52,4 @@ $p = 2 \times P(Z \geq 0.329) = 2 \times 0.3707 = 0.7414$
 
 作為品質管理經理，您可以向消費者利益小組報告以下內容：
 
-> 根據我們的檢測數據，對 35 個包裝樣本的分析顯示，平均包裝重量為 1.01 磅，與預期的 1 磅非常接近。經過統計檢驗，結果表明我們的包裝重量沒有顯著差異（p-value = 0.7414，顯著水準 = 0.05）。因此，我們可以有信心地認為包裝過程符合品質標準。
+根據對 35 個隨機抽樣包裝的分析，牛絞肉的平均重量為 1.01 磅，略高於設計重量 1 磅，這一差異不具有統計顯著性 p = 0.7414 ，高於顯著水準 α = 0.05，統計檢驗結果顯示平均重量可能是正確的。
