--- a/HW1123/HW1123Q06.md
+++ b/HW1123/HW1123Q06.md
@@ -24,7 +24,7 @@ b. $\alpha$ = 0.05, Z = -1.645 (查表得知), RR = {Z < -1.645}
 
 c. The test statstic is $Z_{\text{STAT}} = \frac{\hat{p} - p_0}{\sqrt{\frac{p_0 q_0}{n}}} = \frac{0.279 - 0.3}{\sqrt{\frac{0.3 \cdot 0.7}{1000}}} = -1.449$     
 
-因為Z的統計檢定量未落在Rejection Region，所以不拒絕虛無假設 $H_{0}$，無直接證據證明 p < .3 。   
+d. 因為Z的統計檢定量未落在Rejection Region，所以不拒絕虛無假設 $H_{0}$，無直接證據證明 p < .3 。   
 
 
 2. A random sample of n = 1400 observations from a binomial population produced x = 529 successes.
@@ -40,7 +40,7 @@ b. $\frac{\alpha}{2}$ = 0.025, Z = 1.96 (查表得知), RR = {Z < -1.96, Z > 1.9
 
 c. The test statstic is $Z_{\text{STAT}} = \frac{\hat{p} - p_0}{\sqrt{\frac{p_0 q_0}{n}}} = \frac{0.3779 - 0.4}{\sqrt{\frac{0.4 \cdot 0.6}{1400}}} = -1.688$ 
 
-因為Z的統計檢定量未落在Rejection Region，所以不拒絕虛無假設 $H_{0}$，無直接證據證明 p $\ne$ 0.4 。  
+d. 因為Z的統計檢定量未落在Rejection Region，所以不拒絕虛無假設 $H_{0}$，無直接證據證明 p $\ne$ 0.4 。  
 
 
 3. Seventy-two successes were observed in a random sample of n = 120 observations from a binomial population.
@@ -56,5 +56,5 @@ b. $\alpha$ = 0.05, Z = 1.645 (查表得知)
 
 c. The test statstic is $Z_{\text{STAT}} = \frac{\hat{p} - p_0}{\sqrt{\frac{p_0 q_0}{n}}} = \frac{0.6 - 0.5}{\sqrt{\frac{0.5 \cdot 0.5}{120}}} = 2.191$     
 
-因為Z的統計檢定量未落在Rejection Region，所以拒絕虛無假設 $H_{0}$，有直接證據證明 p > .5 。 
+d. 因為Z的統計檢定量未落在Rejection Region，所以拒絕虛無假設 $H_{0}$，有直接證據證明 p > .5 。 
 
