--- a/HW1123/15_林秀鴻/CH09.02_Q23.md
+++ b/HW1123/15_林秀鴻/CH09.02_Q23.md
@@ -1,1 +1,41 @@
 
+
+![image](https://github.com/user-attachments/assets/721356f2-dfd1-4520-b236-c6173577b377)
+
+牛絞肉被包裝在小托盤中，目的是用來容納 1 磅的肉。一個包含 35 個小托盤隨機樣本的測量結果顯示，平均重量為 1.01 磅，標準差為 0.18 磅。
+
+<img width="487" alt="image" src="https://github.com/user-attachments/assets/a1b34a8a-801b-4d8a-91e9-fd81340bcd60">
+
+
+### a. 如果你是品管經理，並希望確認平均漢堡肉重量是否確實為 1 磅，應檢定哪些假設？
+
+   -虛無假設 $H_0$: $\mu = 1$ (平均重量為 1 磅)
+
+   -對立假設 $H_a$:  $\mu \neq 1$ (假設平均重量不等於 1 磅)（雙尾檢定）。
+   
+---
+
+### b. 計算檢定的 p 值，並根據此 p 值執行 a 部分的檢定。
+
+- 樣本量 $n = 35$（大於 30，符合使用 $Z$ 分布的條件）
+- 樣本平均數 $\bar{x} = 1.01$，假設平均數 $\mu = 1$
+- 樣本標準差 $s = 0.18$
+- 假設 α = 0.05
+
+檢定統計量 z 的計算公式： $z = \frac{\bar{x} - \mu}{s / \sqrt{n}}$
+= $\frac{1.01 - 1}{0.18 / \sqrt{35}} = \frac{0.01}{0.0304} \approx 0.329$
+
+查表得： $P(Z < 0.33) = 0.6293$
+
+<img width="179" alt="image" src="https://github.com/user-attachments/assets/ef1211b4-5540-4d38-8b15-cc39a624362c">
+
+雙尾檢定的 $P-Value$： $P\text{-Value} = 2 \cdot P(Z > |z|) = 2 \cdot P(Z > 0.33)$
+
+$P\text{-Value} = 2 \cdot (1 - 0.6293) = 2 \cdot 0.3707 = 0.7414$
+
+- 因為 $p = 0.7414 > 0.05$，沒有落入拒絕域(Rejection Region)，所以不拒絕 $H_0$。
+
+---
+
+### c. 作為品管經理，你將如何向消費者利益團體報告你的研究結果？
+統計檢驗結果顯示，這一差異不具有統計顯著性（ $p = 0.7414$，高於顯著水準 $\alpha = 0.05$）。因此，表示牛絞肉包裝重量應該與實際重量相符。
