--- a/HW1123/HW1123Q01.md
+++ b/HW1123/HW1123Q01.md
@@ -21,10 +21,10 @@ Z=-2.41落入拒絕區
 
  
 
-Q9 . 左尾檢定，顯著水準 α=0.05 ，**P = 0.008 > α=0.05 → Reject H0
+Q9 . 左尾檢定，顯著水準 α=0.05 ，Z=-1.645，若Z小於-1.645則落入拒絕區。
 
-
-在該顯著水準下拒絕該虛無假說。
+Z=-2.41落入拒絕區
+![image](https://github.com/user-attachments/assets/1581844e-a2de-4588-bcab-054a5830496d)
 
  
 
