--- a/HW1123/10_蔡佳媛/CH09.04_Q10_10_Cathy.md
+++ b/HW1123/10_蔡佳媛/CH09.04_Q10_10_Cathy.md
@@ -5,11 +5,15 @@
 75% of the offspring resulting form this cross will have red flowers  
 n = 100, 58 plants had red petals  
 
-### a. Why hypothesis should you use to test the geneticist's claim?
+### a. What hypothesis should you use to test the geneticist's claim?
 
+$H_{0}$: p $\geq$ 0.75  
+$H_{0}$: p $\lt$ 0.75  
 
 
 ### b. Calculate the test statistic and its p-value. Use the p-value to evaluate the statistical significance of the results at the 1% level.
 
+$\alpha$ = 0.01  
 
+Test statistical: z $\apporx \frac{\hat{p}-p}{\sqrt{\frac{p_{0}q_{0}}{n}}}$ = $\frac{0.58-0.75}{\sqrt{\frac{0.75 \times 0.25}{100}}}$ = -3.92598 $\approx$ -3.93
   
