--- a/HW1123/15_林秀鴻/CH09.02_Q24.md
+++ b/HW1123/15_林秀鴻/CH09.02_Q24.md
@@ -1,1 +1,58 @@
 
+
+![image](https://github.com/user-attachments/assets/c849f7e3-ff54-44e8-8793-e7c5daffb401)
+![image](https://github.com/user-attachments/assets/f2680456-3b87-46c5-9447-c2405cd25322)
+
+已知3個月大女baby體重的平均數為5.86公斤。內城一家兒科醫生懷疑他們診所內3個月大女baby的平均體重可能低於5.86公斤。他們隨機抽樣了40名3個月大的女baby，發現樣本平均數為5.56公斤，樣本標準差0.70公斤。
+
+μ=5.86，n=40， $\bar{x}$ =5.56， $s$ =0.70
+
+![image](https://github.com/user-attachments/assets/9bb8b626-02ce-46be-867f-99be36c93e4a)
+
+![image](https://github.com/user-attachments/assets/d3e25622-dc77-4ba2-808a-0643062e1389)
+
+http://homepage.ntu.edu.tw/~clhsieh/biostatistic/
+
+## **a. 這些數據是否指出該診所中3個月大女baby的平均體重低於5.86公斤？使用顯著水準 $\alpha = 0.05$ 進行檢定**
+
+![image](https://github.com/user-attachments/assets/e1f13423-1817-48ea-a05a-90a18a9578ad)
+
+左尾檢定：
+
+虛無假設H₀: μ = 5.86 公斤 
+
+對立假設H₁: μ < 5.86 公斤 
+
+n = 40 > 30，by Slutsky's T
+
+$Z_{STAT}$ = $\frac{\bar{x} - \mu}{s / \sqrt{n}} = \frac{5.56 - 5.86}{0.70 / \sqrt{40}} = \frac{-0.30}{0.70 / 6.3246} \approx \frac{-0.30}{0.1107} \approx -2.71$
+
+顯著水準α = 0.05，臨界值 - $Z_{α}$ = -1.645，rejection region ={z : z<-1.645}
+
+z ＝ -1.645，無法拒絕 H₀
+
+z < -1.645，拒絕 H₀
+
+-2.71 < -1.645，故拒絕
+
+## **b. 承a題，p-value是多少？在5%的顯著水準下，p-value能否拒絕 $H_0$？**
+
+![image](https://github.com/user-attachments/assets/d903ff84-3177-4dc3-bc41-0ca241284827)
+
+p-value = α，無法拒絕 H₀
+
+p-value < α ，拒絕 H₀
+
+$Z_{STAT}$ ≈ -2.71，p-value = p(z<-2.71) = 0.0034 (查表得)
+
+0.0034 < 0.05，故拒絕
+
+**總結：**
+
+a. 
+$Z_{STAT}$ ≈ -2.71 < -1.645
+
+b. 
+p-value約為0.0034，小於5%的顯著水準。
+
+綜合以上顯著證據（significant evidence）皆拒絕H₀，因此該診所3個月大女baby的平均體重可能低於5.86公斤(H₁)。
