--- a/HW1123/HW1123Q01.md
+++ b/HW1123/HW1123Q01.md
@@ -31,7 +31,7 @@ Z=-2.41落入拒絕區
 ![image](https://github.com/user-attachments/assets/9ece5f98-1bf1-4d34-8b1e-b3764506c213)
 
 
-Q10.  雙尾檢定，顯著水準 α=0.02 ，P-value = 2x0.008 = 0.016, Reject H0
+Q10.  雙尾檢定，顯著水準 α=0.02，
 
 在該顯著水準下拒絕該虛無假說
 
