--- a/HW1123/HW1123Q09.md
+++ b/HW1123/HW1123Q09.md
@@ -1,25 +1,27 @@
 <img width="275" alt="image" src="https://github.com/user-attachments/assets/438811d6-1af5-48f9-a480-53d28a275ef4">
 
-## (a) Hypotheses假設檢定 
+## (1) Hypotheses假設檢定 
 - Ho: 小企業失敗現狀比例 20%，即 $p = 0.2$。
 - Ha: 新稅法使得小企業失敗的比例降低，即 $p < 0.2$。
 
-## (b) 計算檢定統計量
+## (2) Set $\alpha$
 
-1. **Sample Proportion樣本比例**:
-   
+$\alpha = 0.05$。
+
+## (3) **Test Statistic檢定統計量**:
+
 $$
 \hat{p} = \frac{\text{失敗企業數}}{\text{樣本大小}} = \frac{30}{200} = 0.15
 $$
-
-2. **Test Statistic檢定統計量**:
 
 $$
 z_{\text{stat}} = \frac{\hat{p} - p_0}{\sqrt{\frac{p_0 (1 - p_0)}{n}}}
 $$
 
+## (4) **計算$Z^*$**:
+
 $$
-Z_{\text{STAT}} = \frac{0.15 - 0.2}{\sqrt{\frac{0.2(1 - 0.2)}{200}}} 
+Z^* = \frac{0.15 - 0.2}{\sqrt{\frac{0.2(1 - 0.2)}{200}}} 
 = \approx -1.77
 $$
 
