--- a/HW1123/HW1123Q09.md
+++ b/HW1123/HW1123Q09.md
@@ -18,7 +18,7 @@ $$
 z_{\text{stat}} = \frac{\hat{p} - p_0}{\sqrt{\frac{p_0 (1 - p_0)}{n}}}
 $$
 
-## (4) **計算$Z^*$**:
+## (4) **計算Z^***:
 
 $$
 Z^* = \frac{0.15 - 0.2}{\sqrt{\frac{0.2(1 - 0.2)}{200}}} 
