--- a/HW1123/18_張睿廷/CH09.02_Q23.md
+++ b/HW1123/18_張睿廷/CH09.02_Q23.md
@@ -1,6 +1,10 @@
+
 ![image](https://github.com/user-attachments/assets/721356f2-dfd1-4520-b236-c6173577b377)
 
 牛絞肉被包裝在小托盤中，目的是用來容納 1 磅的肉。一個包含 35 個小托盤隨機樣本的測量結果顯示，平均重量為 1.01 磅，標準差為 0.18 磅。
+
+<img width="487" alt="image" src="https://github.com/user-attachments/assets/a1b34a8a-801b-4d8a-91e9-fd81340bcd60">
+
 
 ### a. 如果你是品管經理，並希望確認平均漢堡肉重量是否確實為 1 磅，應檢定哪些假設？
 
@@ -17,7 +21,7 @@
 - 樣本標準差 $s = 0.18$
 - 假設 α = 0.05
 
-Z分配公式： $z = \frac{\bar{x} - \mu}{s / \sqrt{n}}$
+檢定統計量 z 的計算公式： $z = \frac{\bar{x} - \mu}{s / \sqrt{n}}$
 = $\frac{1.01 - 1}{0.18 / \sqrt{35}} = \frac{0.01}{0.0304} \approx 0.329$
 
 查表得： $P(Z < 0.33) = 0.6293$
