--- a/HW1123/06_陳嘉祥/CH09.02_Q08-10.md
+++ b/HW1123/06_陳嘉祥/CH09.02_Q08-10.md
@@ -21,6 +21,6 @@ P(Z<-2.41)=0.0080 < $\alpha=0.05$，落在Rejection Region，故拒絕H0
 
 ### 10.雙尾檢定， $\alpha=0.02$ :  
 
-P(Z<-2.41)=0.0080 < $\alpha/2=0.02/2=0.01$，落在Rejection Region，故拒絕H0 
+2P(Z<|-2.41|)=2*0.0080=0.016 < $\alpha =0.02$，落在Rejection Region，故拒絕H0 
 
 
