--- a/HW1123/HW1123Q02.md
+++ b/HW1123/HW1123Q02.md
@@ -25,7 +25,7 @@ If p-value is smaller than $\alpha$, reject $\{H_0}$. Otherwise, do not reject $
 | 0.05                | Do not reject $\{H_0}$    |
 | 0.01               | Do not reject $\{H_0}$     |
 
-Ans: Not statistical significant
+Ans: Not statistically significant
 
 ## Q12.
 
@@ -66,6 +66,6 @@ If p-value is smaller than $\alpha$, reject $\{H_0}$. Otherwise, do not reject $
 | 0.01               | Do not reject $\{H_0}$     |
 
 
-Ans: Statistical Significant
+Ans: Statistically Significant
 
 
