--- a/HW1123/06_陳嘉祥/CH10.02_Q21.md
+++ b/HW1123/06_陳嘉祥/CH10.02_Q21.md
@@ -4,3 +4,17 @@ Title: HW1123_06_Titan(陳嘉祥)
 
 ![CH10 02_Q21](https://github.com/user-attachments/assets/f6ec582d-105b-4da2-8001-6726b6574231)
 
+由題目得知：對 17 棵 4 年生紅松樹主幹的生長進行測量，樣本的平均值和標準差分別為 28.7 和 8.6 公分。
+
+請為具有相似環境條件下的 4 年生紅松樹群體計算 90% 信賴區。
+
+已知條件 : n=17, $$\bar{x} $$=28.7, s=8.6 , $$\sigma $$未知，小樣本，假設樣本隨機抽樣來自常態母體，故採用t分配進行信賴區間估計。 
+
+C.I. = P ( $$\bar{x} - t * \frac{s} {\sqrt{n}} $$ < $$t $$ < $$\bar{x} +t * \frac{s} {\sqrt{n}} $$ ) = 0.9  
+
+= P ( $$28.7 - 1.746 * \frac{8.6} {\sqrt{17}} $$ < $$t $$ < $$28.7 + 1.746 * \frac{8.6} {\sqrt{17}} $$ ) = 0.9  
+
+= P ( 21.5011 < t < 35.8989 ) = 0.9 
+
+因此，90%的信賴水準之下，母體平均數會落在信賴區間(21.5011 , 35.8989)之間。
+
