--- a/HW1123/06_陳嘉祥/CH10.02_Q21.md
+++ b/HW1123/06_陳嘉祥/CH10.02_Q21.md
@@ -10,11 +10,13 @@ Title: HW1123_06_Titan(陳嘉祥)
 
 已知條件 : n=17, $$\bar{x} $$=28.7, s=8.6 , $$\sigma $$未知，小樣本，假設樣本隨機抽樣來自常態母體，故採用t分配進行信賴區間估計。 
 
+查表得到 : 
+
 C.I. = P ( $$\bar{x} - t * \frac{s} {\sqrt{n}} $$ < $$t $$ < $$\bar{x} +t * \frac{s} {\sqrt{n}} $$ ) = 0.9  
 
 = P ( $$28.7 - 1.746 * \frac{8.6} {\sqrt{17}} $$ < $$t $$ < $$28.7 + 1.746 * \frac{8.6} {\sqrt{17}} $$ ) = 0.9  
 
-= P ( 21.5011 < t < 35.8989 ) = 0.9 
+= P ( 25.0578 < t < 32.3422 ) = 0.9 
 
-因此，90%的信賴水準之下，母體平均數會落在信賴區間(21.5011 , 35.8989)之間。
+因此，90%的信賴水準之下，母體平均數會落在信賴區間(25.0578 , 32.3422)之間。
 
