--- a/HW1123/13_陳峻毅/CH09.02_Q08-10.md
+++ b/HW1123/13_陳峻毅/CH09.02_Q08-10.md
@@ -1,6 +1,6 @@
 ![391331082-d0c8c47b-2815-466a-aa0d-1d3190eb5084](https://github.com/user-attachments/assets/ba3e24a6-8889-4ccb-a130-4841b3348bf1)
 
-## 題目 8：左尾檢定，$\alpha = 0.01$
+## 題目 8：左尾檢定， $\alpha = 0.01$
 
 - **拒絕域**：  
   對於左尾檢定，臨界值 $z_\alpha$ 可從標準常態分布表中查得。當 $\alpha = 0.01$，對應的 $z$ 臨界值為：
@@ -22,7 +22,7 @@
 
 ---
 
-## 題目 9：左尾檢定，$\alpha = 0.05$
+## 題目 9：左尾檢定， $\alpha = 0.05$
 
 - **拒絕域**：  
   當 $\alpha = 0.05$，對應的 $z$ 臨界值為：
@@ -49,7 +49,7 @@
 
 ---
 
-## 題目 10：雙尾檢定，$\alpha = 0.02$
+## 題目 10：雙尾檢定， $\alpha = 0.02$
 
 - **拒絕域**：  
   雙尾檢定中，將 $\alpha$ 平分於兩尾，每尾的 $\alpha = 0.01$。因此，臨界值為：
@@ -69,9 +69,7 @@
 
 - **信賴度**：  
   計算 $p$ 值（雙尾檢定）：
-  $$
-  p = 2 \times P(Z \leq -2.41) \approx 2 \times 0.0079 = 0.0158
-  $$
+  $p = 2 \times P(Z \leq -2.41) \approx 2 \times 0.0079 = 0.0158$
   因為 $p < \alpha = 0.02$，結論具有可靠性。
 
 
