--- a/HW1123/13_陳峻毅/CH09.02_Q08-10.md
+++ b/HW1123/13_陳峻毅/CH09.02_Q08-10.md
@@ -8,16 +8,14 @@
   因此，拒絕域為：
   $z \leq -2.33$
 - **檢定統計量**：  
-  給定檢定統計量 $z = -2.41$，落入拒絕域，因為 $-2.41 < -2.33$。
+  給定檢定統計量 $z = -2.41$，落入拒絕域，因為 -2.41 < -2.33。
 
 - **結論**：  
-  拒絕虛無假設（$H_0$）。
+  拒絕虛無假設 $H_0$。
 
 - **信賴度**：  
   計算 $p$ 值：
-  $$
-  p = P(Z \leq -2.41) \approx 0.0079
-  $$
+  $p = P(Z \leq -2.41) \approx 0.0079$
   因為 $p < \alpha = 0.01$，結論具有高度可靠性。
 
 ---
