--- a/HW1123/06_陳嘉祥/CH10.02_Q21.md
+++ b/HW1123/06_陳嘉祥/CH10.02_Q21.md
@@ -8,7 +8,7 @@ Title: HW1123_06_Titan(陳嘉祥)
 
 請為具有相似環境條件下的 4 年生紅松樹群體計算 90% 信賴區。
 
-已知條件 : n=17, $$\bar{x} $$=28.7, s=8.6 , $$\sigma $$未知，小樣本，假設樣本隨機抽樣來自常態母體，故採用t分配進行信賴區間估計。 
+已知條件 : n=17, d.f.=16, $$\bar{x} $$=28.7, s=8.6 , $$\sigma $$未知，小樣本，假設樣本隨機抽樣來自常態母體，故採用t分配進行信賴區間估計。 
 
 查t分配表得到 :  $$t_{17,0.05} $$ = 1.746
 
