--- a/HW1123/13_陳峻毅/CH09.02_Q08-10.md
+++ b/HW1123/13_陳峻毅/CH09.02_Q08-10.md
@@ -14,7 +14,7 @@
   拒絕虛無假設 $H_0$。
 
 - **信賴度**：  
-  計算 $p$ 值：
+  計算 p 值：
   $p = P(Z \leq -2.41) \approx 0.0079$
   因為 $p < \alpha = 0.01$，結論具有高度可靠性。
 
@@ -29,16 +29,14 @@
   $z \leq -1.645$
 
 - **檢定統計量**：  
-  $z = -2.41$ 落入拒絕域，因為 -2.41 < -1.645。
+  z = -2.41落入拒絕域，因為 -2.41 < -1.645。
 
 - **結論**：  
-  拒絕虛無假設（$H_0$）。
+  拒絕虛無假設$H_0$。
 
 - **信賴度**：  
-  計算 $p$ 值：
-  $$
-  p = P(Z \leq -2.41) \approx 0.0079
-  $$
+  計算 p值：
+  $p = P(Z \leq -2.41) \approx 0.0079$
   因為 $p < \alpha = 0.05$，結論具有可靠性。
 
 ---
@@ -58,7 +56,7 @@
   拒絕虛無假設$H_0$。
 
 - **信賴度**：  
-  計算 p$值（雙尾檢定）：
+  計算 p值（雙尾檢定）：
   $p = 2 \times P(Z \leq -2.41) \approx 2 \times 0.0079 = 0.0158$
   因為 $p < \alpha = 0.02$，結論具有可靠性。
 
