--- a/HW1123/06_陳嘉祥/CH09.04_Q01-03.md
+++ b/HW1123/06_陳嘉祥/CH09.04_Q01-03.md
@@ -18,7 +18,7 @@ $$H_a$$ : P < 0.3 (左尾檢定)
 
 Z-test :  
 
-Z = $$\frac{\hat{p} - p_0}{\sqrt{\frac{p_0 q_0}{n}}} $$ = $$\frac{0.279 - 0.3}{\sqrt{\frac{0.3 * 0.7}{1000}}} $$ = -1.449 > -1.645 $$。     
+Z = $$\frac{\hat{p} - p_0}{\sqrt{\frac{p_0 q_0}{n}}} $$ = $$\frac{0.279 - 0.3}{\sqrt{\frac{0.3 * 0.7}{1000}}} $$ = -1.449 > -1.645 。     
 
 因為Z檢定量未落在Rejection Region，故不拒絕 $$H_{0} $$ 。   
 
@@ -34,7 +34,7 @@ $$H_a$$ : P $$\ne $$ 0.4 (雙尾檢定)
 
 Z-test :  
 
-|Z| = $$\frac{\hat{p} - p_0}{\sqrt{\frac{p_0 q_0}{n}}} $$ = $$\frac{0.3779 - 0.4}{\sqrt{\frac{0.4 * 0.6}{1400}}} $$ = 1.688 < 1.96 $$。     
+|Z| = $$\frac{\hat{p} - p_0}{\sqrt{\frac{p_0 q_0}{n}}} $$ = $$\frac{0.3779 - 0.4}{\sqrt{\frac{0.4 * 0.6}{1400}}} $$ = 1.688 < 1.96 。     
 
 因為Z檢定量未落在Rejection Region，故不拒絕 $$H_{0} $$ 。   
 
@@ -50,7 +50,7 @@ $$H_a$$ : P > 0.5 (右尾檢定)
  
 Z-test :   
  
-Z = $$\frac{\hat{p} - p_0}{\sqrt{\frac{p_0 q_0}{n}}} $$ = $$\frac{0.6 - 0.5}{\sqrt{\frac{0.5 * 0.5}{1000}}} $$ = 2.1909 > 1.645 $$。   
+Z = $$\frac{\hat{p} - p_0}{\sqrt{\frac{p_0 q_0}{n}}} $$ = $$\frac{0.6 - 0.5}{\sqrt{\frac{0.5 * 0.5}{1000}}} $$ = 2.1909 > 1.645 。   
  
 因為Z檢定量落入Rejection Region，故拒絕 $$H_{0} $$ 。   
 
