--- a/HW1123/HW1123Q05.md
+++ b/HW1123/HW1123Q05.md
@@ -1,2 +1,5 @@
 ![image](https://github.com/user-attachments/assets/38aae914-1c8e-45b2-b229-ff19a55149b1)
 
+![image](https://github.com/user-attachments/assets/ffd7ea92-352f-406d-9abf-64402d93e0d5)
+
+![image](https://github.com/user-attachments/assets/6658e0eb-f989-4e93-a74e-b29a7d8ad1de)
