--- a/HW1123/13_陳峻毅/CH09.02_Q24.md
+++ b/HW1123/13_陳峻毅/CH09.02_Q24.md
@@ -42,5 +42,5 @@ $P(Z \leq -2.71) \approx 0.0034$
 因此，我們拒絕虛無假設 $H_0$。
 ---
 ## 結果報告
-1. **數據顯示**：平均體重顯著小於 5.86 公斤，支持替代假設 $H_1$。
-2. **統計結論**：在顯著水準 $\alpha = 0.05\$ 下，p = 0.0034 提供強有力的證據支持設施內的女嬰平均體重低於標準值。
+1. **數據顯示**：平均體重顯著小於 5.86 公斤，支持 $H_1$。
+2. **統計結論**：在顯著水準 $\alpha = 0.05\$ 下，p = 0.0034 提供足夠的證據顯示可能設施內的女嬰平均體重低於標準值。
