--- a/HW1123/10_蔡佳媛/CH09.04_Q10_10_Cathy.md
+++ b/HW1123/10_蔡佳媛/CH09.04_Q10_10_Cathy.md
@@ -15,5 +15,9 @@ $H_{0}$: p $\lt$ 0.75
 
 $\alpha$ = 0.01  
 
-Test statistical: z $\apporx \frac{\hat{p}-p}{\sqrt{\frac{p_{0}q_{0}}{n}}}$ = $\frac{0.58-0.75}{\sqrt{\frac{0.75 \times 0.25}{100}}}$ = -3.92598 $\approx$ -3.93
+Test statistical: z $\approx \frac{\hat{p}-p}{\sqrt{\frac{p_{0}q_{0}}{n}}}$ = $\frac{0.58-0.75}{\sqrt{\frac{0.75 \times 0.25}{100}}}$ = -3.92598 $\approx$ -3.93  
+
+z $\lt$ -2.33, falls into the rejection region and $H_{0}$ is rejected
+
+![image](https://github.com/user-attachments/assets/cea8f45f-3226-4a1b-a4ec-f98924e558fe)
   
