--- a/HW1123/04_林佑娟/CH09.04_Q10.md
+++ b/HW1123/04_林佑娟/CH09.04_Q10.md
@@ -28,9 +28,9 @@ b.
 
 Z = $$\frac{0.58-0.75}{\sqrt{\frac{0.75*0.25}{100}}} $$ = -3.9260
 
-P(Z=-3.93)= 0
+查表 P(Z=-3.93)= 0
 
-P-Value < a = 0.01
+2P-Value < a = 0.01
 
 結論：拒絕 H_0。這意味著有足夠的證據表明紅色花瓣的比例不等於 75%。
 
