--- a/HW1123/08_蕭宇辰/CH09.02_Q24.md
+++ b/HW1123/08_蕭宇辰/CH09.02_Q24.md
@@ -17,7 +17,7 @@ $H_a$ : $\mu$ < 5.86
 
 設定 $\alpha$ = 0.05
 
-由The Slutsky's theorem: $\frac{\bar{x} - \mu}{s/\sqrt{n}}$ -> Z
+由The Slutsky's theorem: $\frac{\bar{x} - \mu_0}{s/\sqrt{n}}$ -> Z
 
 計算統計量
 
