--- a/HW1123/06_陳嘉祥/CH09.02_Q24.md
+++ b/HW1123/06_陳嘉祥/CH09.02_Q24.md
@@ -19,7 +19,7 @@ $$H_a$$ : $$\mu < $$ 5.86 (左尾檢定)
 
 $$\alpha $$ = 0.05，查表得到 $$Z_{0.05} $$  = -1.645  
 
-Z-test : Z = $$\frac{\bar{x} - \mu}{s/\sqrt{n}} $$  = P(Z>| $$\frac{5.56 - 5.86}{0.70/\sqrt{40}} $$ |) = -2.7105 < -1.645。    
+Z-test : Z = $$\frac{\bar{x} - \mu_0}{s/\sqrt{n}} $$  = P(Z>| $$\frac{5.56 - 5.86}{0.70/\sqrt{40}} $$ |) = -2.7105 < -1.645。    
 
 因為Z檢定量落在Rejection Region，故拒絕 $$H_{0} $$ 。 
 
@@ -30,3 +30,4 @@ P-Value = P( Z < -2.7105 )，查表得到 : P( Z < -2.7105 ) = 0.00335 < $$\alph
 
 可以。因為P-Value檢定量<顯著水準($$\alpha $$)，故拒絕 $$H_{0} $$。
 
+因此該診所3個月大的女嬰體重可能低於5.86公斤
