--- a/HW1123/06_陳嘉祥/CH09.02_Q23.md
+++ b/HW1123/06_陳嘉祥/CH09.02_Q23.md
@@ -13,7 +13,7 @@ $$H_a$$ : $$\mu\ne$$ 1  (雙尾檢定)
 ### b. 計算 p 值並用它來執行假設檢定。
 假設 $\alpha = 0.05$， 
 
-由題意知樣本量(n=35)大於統計學家認定的30，故 $$\frac{\bar{x} - \mu}{s/\sqrt{n}}$$ -> 可以使用Z分配進行檢定。 
+由題意知樣本量(n=35)大於統計學家認定的30，故 $$\frac{\bar{x} - \mu_0}{s/\sqrt{n}}$$ -> 可以使用Z分配進行檢定。 
 
 P-Value=P(Z>| $$z_{0}$$ |)= 2 * P(Z>| $$\frac{1.01 - 1}{0.18/\sqrt{35}} $$ |) = 2 * P(Z>0.33)，查表得到: 
 
