--- a/HW1123/HW1123Q04.md
+++ b/HW1123/HW1123Q04.md
@@ -7,7 +7,7 @@
 
 已知3個月大女baby體重的平均數為5.86公斤。內城一家兒科醫生懷疑他們診所內3個月大女baby的平均體重可能低於5.86公斤。他們隨機抽樣了40名3個月大的女baby，發現樣本平均數為5.56公斤，樣本標準差0.70公斤。
 
-μ=5.86，n=40， $\bar{x}$ =5.56， $s$ =0.70
+$\mu_0$=5.86，n=40， $\bar{x}$ =5.56， $s$ =0.70
 
 ![image](https://github.com/user-attachments/assets/9bb8b626-02ce-46be-867f-99be36c93e4a)
 
@@ -27,7 +27,7 @@ http://homepage.ntu.edu.tw/~clhsieh/biostatistic/
 
 n = 40 > 30，by Slutsky's T
 
-$Z_{STAT}$ = $\frac{\bar{x} - \mu}{s / \sqrt{n}} = \frac{5.56 - 5.86}{0.70 / \sqrt{40}} = \frac{-0.30}{0.70 / 6.3246} \approx \frac{-0.30}{0.1107} \approx -2.71$
+$Z_{STAT}$ = $\frac{\bar{x} - \mu_0}{s / \sqrt{n}} = \frac{5.56 - 5.86}{0.70 / \sqrt{40}} = \frac{-0.30}{0.70 / 6.3246} \approx \frac{-0.30}{0.1107} \approx -2.71$
 
 顯著水準α = 0.05，臨界值 - $Z_{α}$ = -1.645，rejection region ={z : z<-1.645}
 
