--- a/HW1123/08_蕭宇辰/CH09.02_Q23.md
+++ b/HW1123/08_蕭宇辰/CH09.02_Q23.md
@@ -13,7 +13,7 @@ $$H_a$$ : $$\mu\ne$$ 1
 
 設定 $$\alpha$$ = 0.05
 
-由The Slutsky's theorem: $$\frac{\bar{x} - \mu}{s/\sqrt{n}}$$ -> Z
+由The Slutsky's theorem: $$\frac{\bar{x} - \mu_0}{s/\sqrt{n}}$$ -> Z
 
 計算統計量 $$Z_stat$$ = $$\frac{1.01-1}{0.18/\sqrt{35}}$$ = 0.3287
 
