--- a/HW1123/HW1123Q03.md
+++ b/HW1123/HW1123Q03.md
@@ -9,7 +9,7 @@
 
 ### a. 如果你是品管經理，並希望確認平均漢堡肉重量是否確實為 1 磅，應檢定哪些假設？
 
-   -虛無假設 $H_0$: $\mu = 1$ (平均重量為 1 磅)
+   -虛無假設 $H_0$: $\mu = \mu_0 = 1$ (平均重量為 1 磅)
 
    -對立假設 $H_a$:  $\mu \neq 1$ (假設平均重量不等於 1 磅)（雙尾檢定）。
    
@@ -18,11 +18,11 @@
 ### b. 計算檢定的 p 值，並根據此 p 值執行 a 部分的檢定。
 
 - 樣本量 $n = 35$（大於 30，符合使用 $Z$ 分布的條件）
-- 樣本平均數 $\bar{x} = 1.01$，假設平均數 $\mu = 1$
+- 樣本平均數 $\bar{x} = 1.01$，假設平均數 $\mu_0 = 1$
 - 樣本標準差 $s = 0.18$
 - 假設 α = 0.05
 
-檢定統計量 z 的計算公式： $z = \frac{\bar{x} - \mu}{s / \sqrt{n}}$
+檢定統計量 z 的計算公式： $z = \frac{\bar{x} - \mu_0}{s / \sqrt{n}}$
 = $\frac{1.01 - 1}{0.18 / \sqrt{35}} = \frac{0.01}{0.0304} \approx 0.329$
 
 查表得： $P(Z < 0.33) = 0.6293$
