--- a/HW1123/15_林秀鴻/CH09.02_Q24.md
+++ b/HW1123/15_林秀鴻/CH09.02_Q24.md
@@ -5,7 +5,7 @@
 
 已知3個月大女baby體重的平均數為5.86公斤。內城一家兒科醫生懷疑他們診所內3個月大女baby的平均體重可能低於5.86公斤。他們隨機抽樣了40名3個月大的女baby，發現樣本平均數為5.56公斤，樣本標準差0.70公斤。
 
-μ=5.86，n=40， $\bar{x}$ =5.56， $s$ =0.70
+μ0=5.86，n=40， $\bar{x}$ =5.56， $s$ =0.70
 
 ![image](https://github.com/user-attachments/assets/9bb8b626-02ce-46be-867f-99be36c93e4a)
 
@@ -19,9 +19,9 @@ http://homepage.ntu.edu.tw/~clhsieh/biostatistic/
 
 左尾檢定：
 
-虛無假設H₀: μ = 5.86 公斤 
+虛無假設H₀: μ0 = 5.86 公斤 
 
-對立假設H₁: μ < 5.86 公斤 
+對立假設H₁: μ1 < 5.86 公斤 
 
 n = 40 > 30，by Slutsky's T
 
