--- a/HW1123/HW1123Q10.md
+++ b/HW1123/HW1123Q10.md
@@ -26,7 +26,7 @@ b.
 
 Ｐ ＝ 58/100 = 0.58
 
-Z = $$\frac{0.58-0.75}{\sqrt{\frac{0.75*0.25}{100}}} $$ = -3.9260
+Z = $$\frac{\hat{p} - p_0}{\sqrt{\frac{p_0 q_0}{n}}} $$ = $$\frac{0.58-0.75}{\sqrt{\frac{0.75*0.25}{100}}} $$ = -3.9260
 
 P(Z=-3.93)= 0
 
