--- a/HW1123/14_陳偉豪/CH09.02_Q23.md
+++ b/HW1123/14_陳偉豪/CH09.02_Q23.md
@@ -5,7 +5,7 @@
 
 ### a. 
 
-虛無假設 $H_0  :  \mu = 1 $
+虛無假設 $H_0  :  \mu = 1 $  
 對立假設 $H_a  : \mu\ne 1$  
 屬於雙尾檢定  
 
@@ -14,7 +14,7 @@
 $n=35 $  
 $\bar{x} = 1.01$  
 $s = 0.18 $  
-$z \approx \frac{\bar{x} - \mu}{s/\sqrt{n}} \Rightarrow  \frac{1.01-1}{0.18/\sqrt{35}} = 0.329 $  
+$z_{stat} = \frac{\bar{x} - \mu_0}{s/\sqrt{n}} \Rightarrow  \frac{1.01-1}{0.18/\sqrt{35}} = 0.329 $  
 $p-value =2* P(z>0.329) =2* 0.3707 \approx 0.7414 $ 
 假設 $\alpha$= 0.05  
 $p = 0.7414 > \alpha $= 0.05  
