--- a/HW1123/HW1123Q11.md
+++ b/HW1123/HW1123Q11.md
@@ -94,7 +94,7 @@ P(Z≤4.60)≈0.999997
 
 2.計算右尾累積概率：
 
-p-value=1−0.999997=0.000003  
+p-value=1−0.999997=0.000003 < α=0.05 
 
 p 值 ≈0.000003 是一個極小的值，表明如果檢測計畫對生存率沒有影響( $H_0$成立)，觀察到樣本生存率 82% 或更高的概率幾乎為零。
 
