--- a/HW1123/13_陳峻毅/CH09.02_Q25.md
+++ b/HW1123/13_陳峻毅/CH09.02_Q25.md
@@ -13,14 +13,14 @@
 
 ## a. 虛無假設  $H_0$
 虛無假設為：
-$H_0: \mu = 80\%$
+$H_0: \mu_0 = 80\%$
 （抗生素的效能平均值為 80%，即符合製造商的聲明）
 
 ---
 
 ## b. 替代假設 $H_1$
 替代假設為：
-$H_1: \mu \neq 80\%$
+$H_1: \mu_0 \neq 80\%$
 （抗生素的效能平均值與 80% 不同）
 
 這是一個 **雙尾檢定**。
