--- a/HW1123/HW1123Q04.md
+++ b/HW1123/HW1123Q04.md
@@ -31,9 +31,8 @@ $Z_{STAT}$ = $\frac{\bar{x} - \mu_0}{s / \sqrt{n}} = \frac{5.56 - 5.86}{0.70 / \
 
 顯著水準α = 0.05，臨界值 - $Z_{α}$ = -1.645，rejection region ={z : z<-1.645}
 
-z ＝ -1.645，無法拒絕 H₀
-
-z < -1.645，拒絕 H₀
+z* > -1.645，不拒絕 H₀
+z* $\leq$ -1.645，拒絕 H₀
 
 -2.71 < -1.645，故拒絕
 
@@ -41,9 +40,9 @@ z < -1.645，拒絕 H₀
 
 ![image](https://github.com/user-attachments/assets/d903ff84-3177-4dc3-bc41-0ca241284827)
 
-p-value = α，無法拒絕 H₀
+p-value $\geq$ α，不拒絕 H₀
 
-p-value < α ，拒絕 H₀
+p-value $\leq$ α ，拒絕 H₀
 
 $Z_{STAT}$ ≈ -2.71，p-value = p(z<-2.71) = 0.0034 (查表得)
 
