--- a/HW1123/10_蔡佳媛/CH09.02_Q25_10_Cathy.md
+++ b/HW1123/10_蔡佳媛/CH09.02_Q25_10_Cathy.md
@@ -25,7 +25,7 @@ $Z_{STAT}$ = $\frac{0.797-0.8}{0.008/\sqrt{100}}$ = -3.75
 
 $Z_{STAT}$ = -3.75 falls into the rejection region and $H_{0}$ is rejected
 
-(b) p-value: P(z < -3.75) $\approx$ 0 < $\alpha$, $H_{0}$ is rejected
+(b) p-value: 2 $\times$ P(z < |-3.75|) $\approx$ 0 < $\alpha$, $H_{0}$ is rejected
     
 
     
