--- a/HW1123/HW1123Q10.md
+++ b/HW1123/HW1123Q10.md
@@ -30,6 +30,6 @@ Z = $$\frac{\hat{p} - p_0}{\sqrt{\frac{p_0 q_0}{n}}} $$ = $$\frac{0.58-0.75}{\sq
 
 P(Z=-3.93)= 0
 
-P-Value < a = 0.01
+P-Value = 2*P(Z>|-3.93|) < a = 0.01
 
 結論：拒絕 H_0。這意味著有足夠的證據表明紅色花瓣的比例不等於 75%。
