--- a/HW1123/HW1123Q05.md
+++ b/HW1123/HW1123Q05.md
@@ -3,3 +3,11 @@
 ![image](https://github.com/user-attachments/assets/ffd7ea92-352f-406d-9abf-64402d93e0d5)
 
 ![image](https://github.com/user-attachments/assets/6658e0eb-f989-4e93-a74e-b29a7d8ad1de)
+
+## Comments from T2 ##
+
+$Z = \frac{\bar{X}-\mu_0}{s/\sqrt{n}}$
+
+$p-value$ = 2P(Z> |-3.75|) $\approx$ 0. 
+
+Reject $H_0$. 
