--- a/HW1123/HW1123Q10.md
+++ b/HW1123/HW1123Q10.md
@@ -32,4 +32,4 @@ P(Z=-3.93)= 0
 
 P-Value = 2*P(Z>|-3.93|) < a = 0.01
 
-結論：拒絕 $H$_0。這意味著有足夠的證據表明紅色花瓣的比例不等於 75%。
+結論：拒絕 $H_0#。這意味著有足夠的證據表明紅色花瓣的比例不等於 75%。
