--- a/HW1123/06_陳嘉祥/CH10.02_Q21.md
+++ b/HW1123/06_陳嘉祥/CH10.02_Q21.md
@@ -12,11 +12,11 @@ Title: HW1123_06_Titan(陳嘉祥)
 
 查t分配表得到 :  $$t_{17,0.05} $$ = 1.746
 
-C.I. = P ( $$\bar{x} - t * \frac{s} {\sqrt{n}} $$ < $$t $$ < $$\bar{x} +t * \frac{s} {\sqrt{n}} $$ ) = 0.9  
+C.I. = P ( $$\bar{x} - t * \frac{s} {\sqrt{n}} $$ < $$\mu_0 $$ < $$\bar{x} +t * \frac{s} {\sqrt{n}} $$ ) = 0.9  
 
-= P ( $$28.7 - 1.746 * \frac{8.6} {\sqrt{17}} $$ < $$t $$ < $$28.7 + 1.746 * \frac{8.6} {\sqrt{17}} $$ ) = 0.9  
+= P ( $$28.7 - 1.746 * \frac{8.6} {\sqrt{17}} $$ < $$\mu_0 $$ < $$28.7 + 1.746 * \frac{8.6} {\sqrt{17}} $$ ) = 0.9  
 
-= P ( 25.0578 < t < 32.3422 ) = 0.9 
+= P ( 25.0578 < \mu_0 < 32.3422 ) = 0.9 
 
-因此，90%的信賴水準之下，母體平均數會落在信賴區間(25.0578 , 32.3422)之間。
+因此，90%的信賴水準之下，母體平均數的數值會落在信賴區間(25.0578 , 32.3422)之間。
 
