--- a/HW1123/08_蕭宇辰/CH09.02_Q25.md
+++ b/HW1123/08_蕭宇辰/CH09.02_Q25.md
@@ -24,7 +24,7 @@ c.
 
 2.設定 $\alpha$ = 0.05
 
-3.由The Slutsky's theorem: $\frac{\hat{p} - p_0}{\sqrt{\frac{p_0 q_0}{n}}}$ -> Z
+3.由The Slutsky's theorem: $\frac{\bar{x} - \mu_0}{\frac{s}{\sqrt{n}}}$ -> Z
 
 4.計算統計量
 
