--- a/HW1123/14_陳偉豪/CH09.02_Q24.md
+++ b/HW1123/14_陳偉豪/CH09.02_Q24.md
@@ -5,7 +5,7 @@
 
 $\bar{x} = 5.56 $  
 
-$\mu = 5.86 $  
+$\mu_0 = 5.86 $  
 
 $s=0.7 $
 
@@ -20,7 +20,7 @@ $H_a : \mu < 5.86 $
 
 設定 $\alpha$ = 0.05
 
-$z = \frac{\bar{x} - \mu}{s/\sqrt{n}} = \frac{(5.56-5.86)}{0.7/\sqrt{40}} = -2.71$ 
+$z \approx \frac{\bar{x} - \mu_0}{s/\sqrt{n}} = \frac{(5.56-5.86)}{0.7/\sqrt{40}} = -2.71$ 
 
 $\alpha = 0.05$  拒絕域為 {Z<-1.645}
 
