--- a/HW1123/HW1123Q09.md
+++ b/HW1123/HW1123Q09.md
@@ -30,13 +30,13 @@ $$
    - 左尾檢定，significance level 顯著水準 $\alpha = 0.05$。
    - 對應標準常態分布的Critical Value臨界值為 $Z(critical) = -1.645$。
    - 由於 $Z(STAT) = -1.77 < Z(critical) = -1.645$，拒絕 Ho
-   - 在significance level 顯著水準 $\alpha = 0.05$ 下，拒絕 Ho的假設。
+   - 在significance level 顯著水準 $\alpha = 0.05$ 下，拒絕 Ho的假設，可能降低小企業失敗率。
 
 ## (5/6) 計算 $p-value$ 與結論
 
    - 查標準常態分布表可得，當 $z = -1.77$ 時，P(z < -1.77) = 0.0384。
    - p-value (0.0384) <  $\alpha (0.05)$ ，拒絕 Ho
-   - 在significance level 顯著水準 $\alpha = 0.05$ 下，拒絕 Ho的假設。
+   - 在significance level 顯著水準 $\alpha = 0.05$ 下，拒絕 Ho的假設，可能降低小企業失敗率。
 
 
 
