--- a/HW1123/HW1123Q09.md
+++ b/HW1123/HW1123Q09.md
@@ -8,7 +8,7 @@
 
 $\alpha = 0.05$。
 
-## (3) **Test Statistic檢定統計量**:
+## (3) **Test Statistic檢定統計量**
 
 $$
 \hat{p} = \frac{\text{失敗企業數}}{\text{樣本大小}} = \frac{30}{200} = 0.15
@@ -18,7 +18,7 @@ $$
 z_{\text{stat}} = \frac{\hat{p} - p_0}{\sqrt{\frac{p_0 (1 - p_0)}{n}}}
 $$
 
-## (4) **計算Z***:
+## (4) **計算Z***
 
 $$
 Z^* = \frac{0.15 - 0.2}{\sqrt{\frac{0.2(1 - 0.2)}{200}}} 
