--- a/HW1123/08_蕭宇辰/CH09.02_Q25.md
+++ b/HW1123/08_蕭宇辰/CH09.02_Q25.md
@@ -32,4 +32,4 @@ $Z_stat$ = $\frac{0.797-0.80}{0.8/\sqrt{100}}$ = -3.75
 
 5. 由 $$\alpha$$ = 0.05 reject region = {Z<-1.96 or Z>1.96}
 
-6. 因統計量落在拒絕域中，因此我們拒絕 $$H_0$$
+6. 因統計量落在拒絕域中，因此我們拒絕 $$H_0$$，即數據提供了足夠的證據駁斥製造商的陳述，抗生素效能並非宣稱的80%
