--- a/HW1123/HW1123Q03.md
+++ b/HW1123/HW1123Q03.md
@@ -39,6 +39,6 @@ $P\text{-Value} = 2 \cdot (1 - 0.6293) = 2 \cdot 0.3707 = 0.7414$
 
 ### c. 作為品管經理，你將如何向消費者利益團體報告你的研究結果？
 
-根據對 35 個隨機抽樣包裝的分析，牛絞肉的平均重量為 **1.01 磅**，略高於設計重量 **1 磅**。然而，統計檢驗結果顯示，這一差異不具有統計顯著性（ $p = 0.7414$，高於顯著水準 $\alpha = 0.05$）。因此，(1)沒有足夠的證據表示牛絞肉包裝重量與實際重量不符 or (2)平均牛絞肉可能每包等於1磅。
+根據對 35 個隨機抽樣包裝的分析，牛絞肉的平均重量為 **1.01 磅**，略高於設計重量 **1 磅**。然而，統計檢驗結果顯示，這一差異不具有統計顯著性（ $p = 0.7414$，高於顯著水準 $\alpha = 0.05$）。因此，(1)沒有足夠的證據表示牛絞肉包裝重量與實際重量不符 or (2)平均每包牛絞肉的重量可能等於1磅。
 
 
