--- a/HW1123/HW1123Q11.md
+++ b/HW1123/HW1123Q11.md
@@ -61,7 +61,7 @@ $H_a$ : P > $\frac{2}{3}$
 
  𝑧=4.60 > $𝑧_𝛼$=1.645
 
- 因為 𝑧超過了臨界值，我們拒絕虛無假設 $H_0$
+ 因為 𝑧超過了臨界值，我們拒絕 $H_0$
 ​
 ### 4.檢定結論： 因為 𝑧=4.60 > $𝑧_𝛼$=1.645，拒絕 $H_0$，落在拒絕域內。所以我們認為檢測計畫有效！
 
