--- a/HW1123/13_陳峻毅/CH09.02_Q25.md
+++ b/HW1123/13_陳峻毅/CH09.02_Q25.md
@@ -38,5 +38,4 @@ $p = 2 \times 0.00009 = 0.00018$
 - 因此，我們拒絕虛無假設 $H_0$。
 ---
 ## 結果報告
-1. **數據顯示**：抗生素的平均效能顯著不同於 80%，這表明製造商的聲明可能不正確。
-2. **統計結論**：在顯著水準 $alpha = 0.05$ 下，p = 0.00018提供非常強的證據，支持效能與製造商聲稱的 80% 不一致。
+統計結論**：在 $alpha = 0.05$ 下，p = 0.00018，提供非常強的證據顯示抗生素的平均效能與製造商的聲明可能不正確。
