--- a/HW1123/14_陳偉豪/CH09.02_Q23.md
+++ b/HW1123/14_陳偉豪/CH09.02_Q23.md
@@ -14,9 +14,9 @@
 $n=35 $  
 $\bar{x} = 1.01$  
 $s = 0.18 $  
-$z_{stat} = \frac{\bar{x} - \mu_0}{s/\sqrt{n}} \Rightarrow  \frac{1.01-1}{0.18/\sqrt{35}} = 0.329 $  
-$p-value =2* P(z>0.329) =2* 0.3707 \approx 0.7414 $ 
-假設 $\alpha$= 0.05  
+$z \approx \frac{\bar{x} - \mu_0}{s/\sqrt{n}} \Rightarrow  \frac{1.01-1}{0.18/\sqrt{35}} = 0.329 $  
+$p-value =2* P(z>0.329) =2* 0.3707 \approx 0.7414 $  
+Set $\alpha$= 0.05  
 $p = 0.7414 > \alpha $= 0.05  
 無法拒絕虛無假設 $H_0 $  
 
