--- a/HW1123/13_陳峻毅/CH09.02_Q25.md
+++ b/HW1123/13_陳峻毅/CH09.02_Q25.md
@@ -27,7 +27,7 @@ $z = \frac{79.7 - 80}{\frac{0.8}{\sqrt{100}}} = \frac{-0.3}{0.08} = -3.75$
 $p = 2 \times P(Z \leq -3.75)$
 
 從標準常態分布表查得：
-$P(Z \leq -3.75) \approx 0.00009$
+$P(Z \leq -3.75) \approx 0.00009$\
 因此：
 $p = 2 \times 0.00009 = 0.00018$
 ---
