--- a/HW1123/HW1123Q10.md
+++ b/HW1123/HW1123Q10.md
@@ -20,7 +20,9 @@ b.
 
 (1)  $H_0$ : P = 75%
 
-(2)  $H_a$ : P $\ne$ 75%
+    $H_a$ : P $\ne$ 75%
+
+(2) $$\alpha $$ = 0.01
 
 (3)  SE =  $\sqrt{pq/n}$ ＝ $\sqrt{0.75*0.25/100}$ = 0.0433
 
