--- a/HW1123/10_蔡佳媛/CH09.02_Q24_10_Cathy.md
+++ b/HW1123/10_蔡佳媛/CH09.02_Q24_10_Cathy.md
@@ -24,3 +24,6 @@ p-value: P(z > -2.71) = 1 - P(z < -2.71) = 1 - 0.0034 = 0.9966 > $\alpha$, $H_{0
 ![image](https://github.com/user-attachments/assets/99111865-ad45-4385-812c-a40ad1f23845)
 
 
+#### Conclusion: The average weight of three-month-old baby girls at their facility is likely less than 5.86 kilograms..
+
+
