--- a/HW1123/06_陳嘉祥/CH09.02_Q24.md
+++ b/HW1123/06_陳嘉祥/CH09.02_Q24.md
@@ -19,7 +19,7 @@ $$H_a$$ : $$\mu < $$ 5.86 (左尾檢定)
 
 $$\alpha $$ = 0.05，查表得到 $$Z_{0.05} $$  = -1.645  
 
-Z-test : Z = $$\frac{\bar{x} - \mu_0}{s/\sqrt{n}} $$  = P(Z>| $$\frac{5.56 - 5.86}{0.70/\sqrt{40}} $$ |) = -2.7105 < -1.645。    
+Z-test : Z = $$\frac{\bar{x} - \mu_0}{s/\sqrt{n}} $$  = $$\frac{5.56 - 5.86}{0.70/\sqrt{40}} $$ = -2.7105 < -1.645。    
 
 因為Z檢定量落在Rejection Region，故拒絕 $$H_{0} $$ 。 
 
