--- a/HW1123/13_陳峻毅/CH09.02_Q25.md
+++ b/HW1123/13_陳峻毅/CH09.02_Q25.md
@@ -22,10 +22,9 @@ $z = \frac{\bar{x} - \mu_0}{\frac{s}{\sqrt{n}}}$
 ### 代入數據計算
 $z = \frac{79.7 - 80}{\frac{0.8}{\sqrt{100}}} = \frac{-0.3}{0.08} = -3.75$
 ---
-### p-value 計算
+### p-value 計算 ###
 這是雙尾檢定，因此我們需要計算兩側的累積概率：
 $p = 2 \times P(Z \leq -3.75)$
-
 從標準常態分布表查得：
 $P(Z \leq -3.75) \approx 0.00009$\
 因此：
