--- a/HW1123/HW1123Q04.md
+++ b/HW1123/HW1123Q04.md
@@ -40,7 +40,7 @@ z* $\leq$ -1.645，拒絕 H₀
 
 ![image](https://github.com/user-attachments/assets/d903ff84-3177-4dc3-bc41-0ca241284827)
 
-p-value $\geq$ α，不拒絕 H₀
+p-value $>$ α，不拒絕 H₀
 
 p-value $\leq$ α ，拒絕 H₀
 
