--- a/HW1123/15_林秀鴻/CH09.02_Q24.md
+++ b/HW1123/15_林秀鴻/CH09.02_Q24.md
@@ -39,7 +39,7 @@ z < -1.645，拒絕 H₀
 
 ![image](https://github.com/user-attachments/assets/d903ff84-3177-4dc3-bc41-0ca241284827)
 
-p-value = α，無法拒絕 H₀
+p-value > α，無法拒絕 H₀
 
 p-value < α ，拒絕 H₀
 
