--- a/HW1123/HW1123Q11.md
+++ b/HW1123/HW1123Q11.md
@@ -3,7 +3,7 @@
 ![image](https://github.com/user-attachments/assets/a56aa696-8296-4fa5-aa2b-923a7463f8ee)
 
 在那些被診斷為早期乳腺癌的女性中，其中有三分之一最終會死於該病。
-假設一項乳腺癌早期檢測計劃已啟動，目的是提高被診斷為該病的女性的生存率 p。從進行了篩查的200名被診斷為乳腺癌的女性中，隨機抽取了一個樣本，記錄了有多少人最終存活下來，設 x 為樣本中存活的女性數量。
+假設一項乳腺癌早期檢測計劃已啟動，目的是提高被診斷為該病的女性的存活率 p。從進行了篩查的200名被診斷為乳腺癌的女性中，隨機抽取了一個樣本，記錄了有多少人最終存活下來，設 x 為樣本中存活的女性數量。
 
 
 
@@ -12,20 +12,20 @@
 
 #### a. 如果希望判斷篩查計劃是否有效，應檢驗的對立假設是什麼？
 
-對立假設檢測計畫的目的是提升生存率：
+對立假設檢測計畫的目的是提升存活率：
 
 #### $H_a$: P> $\frac{2}{3}$=0.6667
 
 
 #### b. 說明虛無假設。
-虛無假設是檢測計畫對生存率無影響，假設「計畫沒有效果」
+虛無假設是檢測計畫對存活率無影響，假設「計畫沒有效果」
 
 #### $H_0$: P = $\frac{2}{3}$=0.6667
 
 
 #### c. 如果在樣本中有 164 名女性生存，是否可以得出篩查計劃有效的結論？使用 α=0.05 進行檢驗，並解釋檢驗的實際結論。
 
-假設檢定（用數據來檢查計畫是否有效）, 我們要進行單尾檢定，檢驗 $H_0$ 是否成立。
+所以我們要進行單尾檢定，檢驗 $H_0$ 是否成立。
 
 已知條件，樣本資訊：
 
@@ -79,7 +79,7 @@ $H_a$ : P > $\frac{2}{3}$
 
 檢定統計量： 𝑧=4.60
 
-我們希望計算右尾的累積概率 𝑃(𝑍>4.60)，這就是 p 值。
+我們希望計算右尾的累積機率 𝑃(𝑍>4.60)，這就是 p 值。
 
 #### 2.計算P值
 
@@ -87,17 +87,17 @@ p-value=1−P(Z≤4.60)
 
 步驟：
 
-1.查找 𝑍=4.60的累積概率 𝑃(𝑍≤4.60)。
+1.查找 𝑍=4.60的累積機率 𝑃(𝑍≤4.60)。
 
 P(Z≤4.60)≈0.999997
 
-2.計算右尾累積概率：
+2.計算右尾累積機率：
 
 p-value=1−0.999997=0.000003 < α=0.05 
 
-p 值 ≈0.000003 是一個極小的值，表明如果檢測計畫對生存率沒有影響( $H_0$成立)，觀察到樣本生存率 82% 或更高的概率幾乎為零。
+p 值 ≈0.000003 是一個極小的值，表明如果檢測計畫對生存率沒有影響( $H_0$成立)，觀察到樣本存活率 82% 或更高的機率幾乎為零。
 
-因此，我們有非常強的證據拒絕 $H_0$，並認為檢測計畫有效，提高了生存率。
+因此，我們有非常強的證據拒絕 $H_0$，並認為檢測計畫有效，提高了存活率。
 
 
 
