--- a/HW1123/06_陳嘉祥/CH09.02_Q25.md
+++ b/HW1123/06_陳嘉祥/CH09.02_Q25.md
@@ -24,7 +24,7 @@ $$H_a$$ : $$\mu\ne $$ 0.8 (雙尾檢定)
 
 $$\alpha $$ = 0.05，因為是雙尾檢定，查表得到 $$Z_{\alpha /2}=Z_{0.025} $$  = 1.96。   
 
-Z-test : Z = $$\frac{\bar{x} - \mu_0}{s/\sqrt{n}} $$  = P(Z>| $$\frac{0.797 - 0.8}{0.008/\sqrt{100}} $$ |) = 3.75 > 1.96。  
+Z-test : Z = $$\frac{\bar{x} - \mu_0}{s/\sqrt{n}} $$  = | $$\frac{0.797 - 0.8}{0.008/\sqrt{100}} $$ | = 3.75 > 1.96。  
 
 因Z檢定量落在Rejection Region， 故拒絕 $$H_{0} $$。 
 
