--- a/HW1123/HW1123Q10.md
+++ b/HW1123/HW1123Q10.md
@@ -18,12 +18,15 @@ a.
 
 b.
 
-(1)  $H_0$ : P = 75%
+(1) 
+ $H_0$ : P = 75%
     $H_a$ : P $\ne$ 75%
 
-(2) $$\alpha $$ = 0.01
+(2) 
+$$\alpha $$ = 0.01
 
-(3)  SE =  $\sqrt{pq/n}$ ＝ $\sqrt{0.75*0.25/100}$ = 0.0433
+(3) 
+SE =  $\sqrt{pq/n}$ ＝ $\sqrt{0.75*0.25/100}$ = 0.0433
 
 Ｐ ＝ 58/100 = 0.58
 
@@ -31,6 +34,8 @@ Z = $$\frac{\hat{p} - p_0}{\sqrt{\frac{p_0 q_0}{n}}} $$ = $$\frac{0.58-0.75}{\sq
 
 P(Z=-3.93)= 0
 
-(4) P-Value = 2*P(Z>|-3.93|) < a = 0.01
+(4) 
+P-Value = 2*P(Z>|-3.93|) < a = 0.01
 
-(5) 結論：拒絕 $$H_0$$ 。這意味著有足夠的證據表明紅色花瓣的比例不等於 75%。
+(5) 
+結論：拒絕 $$H_0$$ 。這意味著有足夠的證據表明紅色花瓣的比例不等於 75%。
