--- a/HW1123/14_陳偉豪/CH09.02_Q24.md
+++ b/HW1123/14_陳偉豪/CH09.02_Q24.md
@@ -20,14 +20,14 @@ $H_a : \mu < 5.86 $
 
 設定 $\alpha$ = 0.05
 
-$z \approx \frac{\bar{x} - \mu_0}{s/\sqrt{n}} = \frac{(5.56-5.86)}{0.7/\sqrt{40}} = -2.71$ 
+$z \approx \frac{\bar{x} - \mu_0}{s/\sqrt{n}} = \frac{(5.56-5.86)}{0.7/\sqrt{40}} = -2.71 = z^* $ 
 
-$\alpha = 0.05$  拒絕域為 {Z<-1.645}
+$\alpha = 0.05$  拒絕域為 ${z<-1.645}$
 
-${-2.71 < -1.645}$ 統計量落在拒絕域中，因此我們拒絕 $H_0$
+${z^* = -2.71 < -1.645}$ 統計量落在拒絕域中，因此我們拒絕 $H_0$
 
 ### b.
 
-$p-value = P(Z<-2.71) \approx 0.034 $
+$p-value = P(z^* <-2.71) \approx 0.034 $
 
 $p-value < \alpha$，故拒絕虛無假設 $H_0$
