--- a/HW1123/14_陳偉豪/CH09.02_Q25.md
+++ b/HW1123/14_陳偉豪/CH09.02_Q25.md
@@ -4,9 +4,9 @@
 
 $n=100$
 
-$\mu = 80$%
+$p_0 = 80$%
 
-$\bar x = 79.7$%  
+$\hat p = 79.7$%  
 
 $s=0.8$%
 
@@ -31,10 +31,10 @@ $H_a : p \ne 80$%
 
 $\frac{\hat{p} - p_0}{\sqrt{\frac{p_0 q_0}{n}}} \rightarrow z $
 
-$Z^* = \frac{0.797-0.8}{0.008/\sqrt{100}} = -3.75 $
+$z^* = \frac{0.797-0.8}{0.008/\sqrt{100}} = -3.75 $
 
-$p-value =2* P(z<-3.75) $  
+$p-value =2* P(z^* <-3.75) $  
 
-因 $P(z<-3.75)$  小於0.002趨近於0，儘管乘上兩倍仍還是遠小於0.05，故 $p-value < \alpha$
+因 $P(z^* <-3.75)$  小於0.002趨近於0，儘管乘上兩倍仍還是遠小於0.05，故 $p-value < \alpha$
 
 因此我們拒絕 $H_0$
