--- a/HW1123/HW1123Q11.md
+++ b/HW1123/HW1123Q11.md
@@ -35,7 +35,7 @@ o	樣本存活數 x=164
 
 o	樣本存活率 $\hat{p} = \frac{x}{n} = \frac{164}{200} = 0.82$
 
-o	原假設效果下的生存率 $P_0$= 0.6667
+o	原假設效果下的存活率 $P_0$= 0.6667
 
 $H_0$ : P = $\frac{2}{3}$
    
