--- a/HW1123/13_陳峻毅/CH09.04_Q1-03.md
+++ b/HW1123/13_陳峻毅/CH09.04_Q1-03.md
@@ -45,10 +45,10 @@ $z = \frac{0.279 - 0.3}{\sqrt{\frac{0.3 (1 - 0.3)}{1000}}} = \frac{-0.021}{\sqrt
 
 ### **a. 假設**
 - **虛無假設 $H_0$**：
-  $H_0: p = 0.4$
+  $H_0: p_0 = 0.4$
   
 - **替代假設 $H_1$**：
-  $H_1: p \neq 0.4$
+  $H_1: p_0 \neq 0.4$
 
 ---
 
