--- a/HW1123/10_蔡佳媛/CH09.02_Q25_10_Cathy.md
+++ b/HW1123/10_蔡佳媛/CH09.02_Q25_10_Cathy.md
@@ -28,4 +28,5 @@ $Z_{STAT}$ = -3.75 falls into the rejection region and $H_{0}$ is rejected
 (b) p-value: 2 $\times$ P(z < |-3.75|) $\approx$ 0 < $\alpha$, $H_{0}$ is rejected
     
 
+#### Conclusion: The mean potency of one of its antibiotics is unlikely to be 80%.
     
