--- a/HW1123/HW1123Q01.md
+++ b/HW1123/HW1123Q01.md
@@ -31,9 +31,10 @@ Z=-2.41落入拒絕區
 ![image](https://github.com/user-attachments/assets/9ece5f98-1bf1-4d34-8b1e-b3764506c213)
 
 
-Q10.  雙尾檢定，顯著水準 α=0.02，
+Q10.  雙尾檢定，顯著水準 α=0.02，P=0.008*2 小於 α=0.02 → P=0.008 小於 α=0.01，落入拒絕區在該顯著水準下拒絕該虛無假說
 
-在該顯著水準下拒絕該虛無假說
+單邊的 α=0.01，左尾的拒絕區為小於-2.33，右尾的拒絕區為大於2.33
+
 
 ![image](https://github.com/user-attachments/assets/d0930f3f-0b6b-449a-83e0-3e4f1432e1bf)
 
