--- a/HW1123/HW1123Q11.md
+++ b/HW1123/HW1123Q11.md
@@ -45,9 +45,9 @@ $H_a$ : P > $\frac{2}{3}$
 
 ### 1. 計算檢定統計量Z
 
-我們使用標準化公式計算檢定統計量: $$\frac{\hat{p} - p_0}{\sqrt{\frac{p_0 q_0}{n}}}$$ -> Z
+我們使用標準化公式計算檢定統計量:  $Z_{STAT}$=$$\frac{\hat{p} - p_0}{\sqrt{\frac{p_0 q_0}{n}}}$$
 
-將數據代入公式： $Z_{STAT}$= $$\frac{0.82-0.6667}{\sqrt{\frac{0.6667*0.3333}{200}}}$$ = 4.599 ${\approx}$ 4.6
+將數據代入公式： Z*= $$\frac{0.82-0.6667}{\sqrt{\frac{0.6667*0.3333}{200}}}$$ = 4.599 ${\approx}$ 4.6
 
 ### 2. 確定臨界值
 
