--- a/HW1123/HW1123Q11.md
+++ b/HW1123/HW1123Q11.md
@@ -45,7 +45,7 @@ $H_a$ : P > $\frac{2}{3}$
 
 ### 1. 計算檢定統計量Z
 
-我們使用標準化公式計算檢定統計量:  $Z_{STAT}$=$$\frac{\hat{p} - p_0}{\sqrt{\frac{p_0 q_0}{n}}}$$
+我們使用標準化公式計算檢定統計量:  $Z_{STAT}$ = $$\frac{\hat{p} - p_0}{\sqrt{\frac{p_0 q_0}{n}}}$$
 
 將數據代入公式： Z*= $$\frac{0.82-0.6667}{\sqrt{\frac{0.6667*0.3333}{200}}}$$ = 4.599 ${\approx}$ 4.6
 
@@ -57,13 +57,13 @@ $H_a$ : P > $\frac{2}{3}$
 
 ### 3. 判斷檢定結果
 
-我們比較檢定統計量 𝑧=4.60 與臨界值 $𝑧_𝛼$=1.645：
+我們比較檢定統計量 𝑧*=4.60 與臨界值 $𝑧_𝛼$=1.645：
 
- 𝑧=4.60 > $𝑧_𝛼$=1.645
+ 𝑧*=4.60 > $𝑧_𝛼$=1.645
 
  因為 𝑧超過了臨界值，我們拒絕 $H_0$
 ​
-### 4.檢定結論： 因為 𝑧=4.60 > $𝑧_𝛼$=1.645，拒絕 $H_0$，落在拒絕域內。所以我們認為檢測計畫有效！
+### 4.檢定結論： 因為 𝑧*=4.60 > $𝑧_𝛼$=1.645，拒絕 $H_0$，落在拒絕域內。所以我們認為檢測計畫有效！
 
 ![image](https://github.com/user-attachments/assets/81209330-7a48-4d41-ab7e-7cba6ad87647)
 
