--- a/HW1123/14_陳偉豪/CH09.04_Q01-Q03.md
+++ b/HW1123/14_陳偉豪/CH09.04_Q01-Q03.md
@@ -20,15 +20,15 @@ $\frac{\hat{p} - p_0}{\sqrt{\frac{p_0 q_0}{n}}} \rightarrow Z$
 
 $Z^* = \frac{0.279 - 0.3}{\sqrt{\frac{0.3*0.7}{1000}}} = -1.45$  
 
-$\alpha = 0.05$ $\quad$ 拒絕域 {Z<-1.645}   
+$\alpha = 0.05$ $\quad$ 拒絕域 {z<-1.645}   
 
-$p-value =P(z<-1.45) =\approx 0.0735 $  
+$p-value =P(z^* <-1.45) =\approx 0.0735 $  
 
 $p > 0.3$
 
 因為沒有落在拒絕域中，故不拒絕虛無假設 $H_0$  
 
-$p < 0.3$ 此情況不顯著  
+沒有足夠證據顯示 $p < 0.3$   
 
 
 ### 2.  
@@ -43,13 +43,13 @@ $H_a : p \ne 0.4$
 
 $\frac{\hat{p} - p_0}{\sqrt{\frac{p_0 q_0}{n}}} \rightarrow Z$  
 
-$Z^* = \frac{0.3779 - 0.4}{\sqrt{\frac{0.4*0.6}{1400}}} = -1.69$  
+$z^* = \frac{0.3779 - 0.4}{\sqrt{\frac{0.4*0.6}{1400}}} = -1.69$  
 
-$\alpha = 0.05$ $\quad$ 拒絕域 $Z>1.96$ or $Z<-1.96$   
+$\alpha = 0.05$ $\quad$ 拒絕域 $z>1.96$ or $z<-1.96$   
 
 因為沒有落在拒絕域中，故不拒絕虛無假設 $H_0$  
 
-$p \ne 0.4$ 此情況不顯著   
+沒有足夠證據顯示 $p \ne 0.4$    
 
 
 
@@ -65,11 +65,13 @@ $H_a : p > 0.5$
 
 $\frac{\hat{p} - p_0}{\sqrt{\frac{p_0 q_0}{n}}} \rightarrow Z$  
 
-$Z^* = \frac{0.6 - 0.5}{\sqrt{\frac{0.5*0.5}{120}}} = 2.19$  
+$z^* = \frac{0.6 - 0.5}{\sqrt{\frac{0.5*0.5}{120}}} = 2.19$  
 
-$\alpha = 0.05$ $\quad$ 拒絕域 ${Z>1.645}$   
+$\alpha = 0.05$ $\quad$ 拒絕域 ${z>1.645}$   
 
-因為落在拒絕域中，故拒絕虛無假設 $H_0$  
+因為落在拒絕域中，故拒絕虛無假設 $H_0$   
+
+有足夠證據顯示 $p > 0.5$
 
 
 
