--- a/HW1123/HW1123Q07.md
+++ b/HW1123/HW1123Q07.md
@@ -15,6 +15,10 @@
 <img width="433" alt="image" src="https://github.com/user-attachments/assets/6ac854d0-b5bc-49fe-8620-54ff5183c3f1">
 
 
+## T2
+
+$\hat{p}$
+
 
 
 
