--- a/HW1123/08_蕭宇辰/CH09.04_Q4-06.md
+++ b/HW1123/08_蕭宇辰/CH09.04_Q4-06.md
@@ -24,7 +24,7 @@
 
    $Z_stat$ = $$\frac{0.3779 - 0.4}{\sqrt{\frac{0.4*0.6}{1000}}}$$ = -1.42
 
-   P-value = P(Z<-1.42) = 0.0778
+   P-value = 2*P(Z<-1.42) = 0.0778*2=0.1556
 
    由 P-value > $$\alpha$$ = 0.025(雙尾檢定) ，故無法拒絕虛無假設，即無足夠證據顯示 P $$\ne$$ 0.4
 
