--- a/HW1123/14_陳偉豪/CH09.04_Q04-Q06.md
+++ b/HW1123/14_陳偉豪/CH09.04_Q04-Q06.md
@@ -4,7 +4,7 @@
 
 $n=1000$  
 
-$\hat p = 0.279$ 
+$p_0 = 0.279$ 
 
 $H_0 : p = 0.3$
    
@@ -16,13 +16,13 @@ $Z^* = \frac{0.279 - 0.3}{\sqrt{\frac{0.3*0.7}{1000}}} = -1.45$
 
 $\alpha = 0.05$ $\quad$ 拒絕域 {Z<-1.645}   
 
-$p-value =P(z<-1.45) \approx 0.0735 > 0.05$  
+$p-value =P(z^* <-1.45) \approx 0.0735 > 0.05$  
 
 $p-value > \alpha$
 
 故不拒絕虛無假設 $H_0$  
 
-$H_a: p < 0.3$ 的情況不顯著  
+沒有足夠證據顯示 $p < 0.3$   
 
 
 ### 2.  
@@ -45,7 +45,7 @@ $p-value > \alpha$
 
 故不拒絕虛無假設 $H_0$  
 
-$H_a : p \ne 0.4$ 的情況不顯著   
+沒有足夠證據顯示 $p \ne 0.4$ 
 
 
 
@@ -69,5 +69,7 @@ $p-value =P(z>2.19) \approx 0.0143 < 0.05$
 
 $p-value < \alpha$
 
-故拒絕虛無假設 $H_0$  
+故拒絕虛無假設 $H_0$
+
+有足夠證據顯示 $p > 0.5$  
 
