--- a/HW1123/06_陳嘉祥/CH09.04_Q04-06.md
+++ b/HW1123/06_陳嘉祥/CH09.04_Q04-06.md
@@ -20,7 +20,7 @@ Z = $$\frac{\hat{p} - p_0}{\sqrt{\frac{p_0 q_0}{n}}} $$ = $$\frac{0.279 - 0.3}{\
 
 P-Value = P( Z < -1.45 )，查表得到 : P( Z < -1.45 ) = 0.0735 > $$\alpha=0.05 $$。  
 
-因為P-Value > $$\alpha $$，故不拒絕 $$H_{0} $$ 。   
+因為P-Value > $$\alpha $$，故不拒絕 $$H_{0} $$ ，所以沒有足夠的證據推翻 $$H_{0} $$。   
 
 ### 5：n=1400，x=529，檢查樣本比例是否與 0.4 有顯著差異。
 
@@ -36,7 +36,7 @@ $$H_a$$ : P $$\ne $$ 0.4 (雙尾檢定)
 
 P-Value = 2*P( Z > 1.69 )，查表得到 : P( Z > 1.69 ) = 0.0455，故 2*P( Z > 1.69 ) = 0.091 > $$\alpha=0.05 $$。
 
-因為P-Value > $$\alpha $$，故不拒絕 $$H_{0} $$ 。   
+因為P-Value > $$\alpha $$，故不拒絕 $$H_{0} $$，所以沒有足夠的證據推翻 $$H_{0} $$。  
 
 ### 6：n=120，x=72，檢查樣本比例是否大於 0.5。
 
@@ -52,5 +52,5 @@ Z = $$\frac{\hat{p} - p_0}{\sqrt{\frac{p_0 q_0}{n}}} $$ = $$\frac{0.6 - 0.5}{\sq
 
 P-Value = P( Z > 2.19 )，查表得到 : P( Z > 2.19 ) = 0.0143 < $$\alpha=0.05 $$。
 
-因為P-Value < $$\alpha $$，故拒絕 $$H_{0} $$ 。   
+因為P-Value < $$\alpha $$，故拒絕 $$H_{0} $$ ，所以有足夠的證據推翻 $$H_{0} $$。   
 
