--- a/HW1123/15_林秀鴻/CH09.04_Q04-06.md
+++ b/HW1123/15_林秀鴻/CH09.04_Q04-06.md
@@ -1,1 +1,92 @@
+![391338207-d1e1229b-854e-419c-9b89-209a64c7947a](https://github.com/user-attachments/assets/9425dea2-04a6-49ad-aa52-16f244f32818)
 
+## **4. 已知數據**
+- n = 1000, x = 279
+- 樣本比例： $\hat{p} = \frac{x}{n} = \frac{279}{1000} = 0.279$
+- 檢定目標：檢驗 p < 0.3（**左尾檢定**）
+- 虛無假設： $H_0: p = 0.3$
+- 替代假設： $H_1: p < 0.3$
+
+### **檢定統計量計算**
+檢定統計量公式：
+$z = \frac{\hat{p} - p_0}{\sqrt{\frac{p_0 (1 - p_0)}{n}}}$
+
+代入數據：
+$z = \frac{0.279 - 0.3}{\sqrt{\frac{0.3 (1 - 0.3)}{1000}}} = \frac{-0.021}{\sqrt{0.00021}} = \frac{-0.021}{0.01449} \approx -1.45$
+
+### **p-value 計算**
+從標準常態分布表查得：
+$P(Z \leq -1.45) \approx 0.0735$
+
+### **結論**
+- 顯著水準  $\alpha = 0.05$
+- 比較：
+  $p = 0.0735 > \alpha = 0.05$
+- **結果**：不拒絕虛無假設  $H_0$。沒有足夠證據支持 p < 0.3。
+
+---
+
+## **5. 已知數據**
+- n = 1400, x = 529
+- 樣本比例： $\hat{p} = \frac{x}{n} = \frac{529}{1400} \approx 0.3779$
+- 檢定目標：檢驗  $p \neq 0.4$（**雙尾檢定**）
+- 虛無假設： $H_0: p = 0.4$
+- 替代假設： $H_1: p \neq 0.4$
+
+### **檢定統計量計算**
+檢定統計量公式：
+$z = \frac{\hat{p} - p_0}{\sqrt{\frac{p_0 (1 - p_0)}{n}}}$
+
+代入數據：
+$z = \frac{0.3779 - 0.4}{\sqrt{\frac{0.4 (1 - 0.4)}{1400}}} = \frac{-0.0221}{\sqrt{0.0001714}} = \frac{-0.0221}{0.01309} \approx -1.69$
+
+### **p-value 計算**
+這是雙尾檢定：
+$p = 2 \times P(Z \leq -1.69)$
+
+從標準常態分布表查得：
+$P(Z \leq -1.69) \approx 0.0455$
+
+因此：
+$p = 2 \times 0.0455 = 0.091$
+
+### **結論**
+- 顯著水準  $\alpha = 0.05$
+- 比較：
+  $p = 0.091 > \alpha = 0.05$
+- **結果**：不拒絕虛無假設  $H_0$。沒有足夠證據支持  $p \neq 0.4$。
+
+---
+
+## **6. 已知數據**
+- n = 120, x = 72
+- 樣本比例： $\hat{p} = \frac{x}{n} = \frac{72}{120} = 0.6$
+- 檢定目標：檢驗 p > 0.5（**右尾檢定**）
+- 虛無假設： $H_0: p = 0.5$
+- 替代假設： $H_1: p > 0.5$
+
+### **檢定統計量計算**
+檢定統計量公式：
+$z = \frac{\hat{p} - p_0}{\sqrt{\frac{p_0 (1 - p_0)}{n}}}$
+
+代入數據：
+$z = \frac{0.6 - 0.5}{\sqrt{\frac{0.5 (1 - 0.5)}{120}}} = \frac{0.1}{\sqrt{0.004167}} = \frac{0.1}{0.06481} \approx 1.54$
+
+### **p-value 計算**
+從標準常態分布表查得：
+$P(Z \geq 1.54) \approx 0.0618$
+
+---
+
+### **結論**
+- 顯著水準  $\alpha = 0.05$
+- 比較：
+  $p = 0.0618 > \alpha = 0.05$
+- **結果**：不拒絕虛無假設  $H_0$。沒有足夠證據支持  $p > 0.5$。
+
+---
+
+## **總結**
+1. **題目 4**：p = 0.0735，結論：不拒絕  $H_0$。
+2. **題目 5**：p = 0.091，結論：不拒絕  $H_0$。
+3. **題目 6**：p = 0.0618，結論：不拒絕  $H_0$。
