--- a/HW1123/04_林佑娟/CH09.02_Q23.md
+++ b/HW1123/04_林佑娟/CH09.02_Q23.md
@@ -2,4 +2,5 @@
 
 <img width="413" alt="截圖 2024-12-07 上午10 34 33" src="https://github.com/user-attachments/assets/086661da-ffea-494b-bb0e-703a8e616a92">
 
-![Uploading IMG_7743.JPG…]()
+![IMG_7743](https://github.com/user-attachments/assets/ca5a64d7-da6e-4ed4-b4d9-0aa84a6c109c)
+
