--- a/HW1123/HW1123Q11.md
+++ b/HW1123/HW1123Q11.md
@@ -69,21 +69,17 @@ $H_a$ : P > $\frac{2}{3}$
 
 ### d. 計算檢驗的 p-value 並解釋其含義
 
-### 1. p 值的定義
+### 1. 計算檢定統計量Z
 
-p 值是指在虛無假設 $H_0$ 成立的情況下，觀察到檢定統計量 𝑧比實際觀測值更極端的概率。
+我們使用標準化公式計算檢定統計量:  $Z_{STAT}$ = $$\frac{\hat{p} - p_0}{\sqrt{\frac{p_0 q_0}{n}}}$$
 
-$H_0$ : P = $\frac{2}{3}$
-   
-$H_a$ : P > $\frac{2}{3}$
+將數據代入公式： Z*= $$\frac{0.82-0.6667}{\sqrt{\frac{0.6667*0.3333}{200}}}$$ = 4.599 ${\approx}$ 4.6
 
-檢定統計量： 𝑧=4.60
-
-我們希望計算右尾的累積機率 𝑃(𝑍>4.60)，這就是 p 值。
+我們希望計算右尾的累積機率 P(𝑍>4.60)，這就是 p 值。
 
 #### 2.計算P值
 
-p-value=1−P(Z≤4.60)
+P-value=1−P(Z≤4.60)
 
 步驟：
 
