--- a/HW1123/04_林佑娟/CH09.02_Q23.md
+++ b/HW1123/04_林佑娟/CH09.02_Q23.md
@@ -4,3 +4,4 @@
 
 ![IMG_7743](https://github.com/user-attachments/assets/ca5a64d7-da6e-4ed4-b4d9-0aa84a6c109c)
 
+![IMG_7744](https://github.com/user-attachments/assets/19d60f78-5ca5-4a14-b17f-f2bc29a64bca)
