--- a/HW1123/HW1123Q11.md
+++ b/HW1123/HW1123Q11.md
@@ -10,20 +10,20 @@
 答案:
 
 
-#### a. 如果希望判斷篩查計劃是否有效，應檢驗的對立假設是什麼？
+### a. 如果希望判斷篩查計劃是否有效，應檢驗的對立假設是什麼？
 
 對立假設檢測計畫的目的是提升存活率：
 
-#### $H_a$: P> $\frac{2}{3}$=0.6667
+### $H_a$: P> $\frac{2}{3}$=0.6667
 
 
-#### b. 說明虛無假設。
+### b. 說明虛無假設。
 虛無假設是檢測計畫對存活率無影響，假設「計畫沒有效果」
 
-#### $H_0$: P = $\frac{2}{3}$=0.6667
+### $H_0$: P = $\frac{2}{3}$=0.6667
 
 
-#### c. 如果在樣本中有 164 名女性生存，是否可以得出篩查計劃有效的結論？使用 α=0.05 進行檢驗，並解釋檢驗的實際結論。
+### c. 如果在樣本中有 164 名女性生存，是否可以得出篩查計劃有效的結論？使用 α=0.05 進行檢驗，並解釋檢驗的實際結論。
 
 所以我們要進行單尾檢定，檢驗 $H_0$ 是否成立。
 
@@ -77,7 +77,7 @@ $H_a$ : P > $\frac{2}{3}$
 
 我們希望計算右尾的累積機率 P(𝑍>4.60)，這就是 p 值。
 
-#### 2.計算P值
+### 2.計算P值
 
 P-value=1−P(Z≤4.60)
 
