--- a/HW1123/15_林秀鴻/CH09.04_Q08.md
+++ b/HW1123/15_林秀鴻/CH09.04_Q08.md
@@ -1,1 +1,36 @@
 
+
+![CH09 04_Q08](https://github.com/user-attachments/assets/fa746a87-67d3-40d8-9cee-98e1fc537e24)
+
+由題目得知：56% 的受訪者表示他們不會乘坐無人駕駛車，樣本大小 n=500，我們要檢驗是否超過 50% 的美國人不會乘坐無人駕駛車。   
+ 
+### a. 使用 α = 0.05 的假設檢定，來確定是否超過50%的美國人不會乘坐無人駕駛車。 
+
+$$H_0$$ : P $$\le $$ 0.5  
+ 
+$$H_a$$ : P > 0.5 (右尾檢定)   
+
+已知條件 : n=500, $$\hat{P} =0.56 $$, n*p=250 且 n*(1-p)=250 $$\ge $$ 5，故可採用Z分配進行檢定。    
+ 
+右尾檢定，故 $$\alpha $$ = 0.05 ，查表得到Z=1.645   
+ 
+Z-test :    
+ 
+Z = $$\frac{\hat{p} - p_0}{\sqrt{\frac{p_0 q_0}{n}}} $$ = $$\frac{0.56 - 0.5}{\sqrt{\frac{0.5 * 0.5}{500}}} $$ = 2.6832 > 1.645    
+ 
+因為Z檢定量落入Rejection Region，故拒絕 $$H_{0} $$ 。      
+  
+
+### b. 使用 p-value 的方法，這兩種方法能得出相同的結果嗎?      
+ 
+$$H_0$$ : P $$\le $$ 0.5  
+ 
+$$H_a$$ : P > 0.5 (右尾檢定)   
+ 
+已知條件 : n=500, $$\hat{P} =0.56 $$, n*p=250 且 n*(1-p)=250 $$\ge $$ 5，由小題a.得知Z值接近2.68。   
+
+P-Value = P( Z > 2.68 )，查表得到 : P( Z > 2.68 ) = 0.0037 < $$\alpha=0.05 $$。 
+
+因為P-Value < $$\alpha $$，故拒絕 $$H_{0} $$ 。    
+
+可以，使用P-Value檢定可得出與Z檢定相同的結果。 
