--- a/HW1123/13_陳峻毅/CH09.04_Q10.md
+++ b/HW1123/13_陳峻毅/CH09.04_Q10.md
@@ -10,11 +10,11 @@
 
 ## a. 假設
 - **虛無假設 $H_0$**：
-   $H_0$: p = 0.75
+   $H_0: p_0 = 0.75$
   （基因學家的聲稱比例為 75%）
 
 - **替代假設 $H_1$**：
-  $H_1: p \neq 0.75$
+  $H_1: p_0 \neq 0.75$
   （實際比例與基因學家的聲稱比例不同）
 
 這是一個 **雙尾檢定**。
@@ -31,26 +31,26 @@ $z = \frac{0.58 - 0.75}{\sqrt{\frac{0.75 \cdot (1 - 0.75)}{100}}} = \frac{-0.17}
 ---
 
 ### p-value 計算
+
 這是雙尾檢定，因此：
 $p = 2 \times P(Z \leq -3.92)$
 
 從標準常態分布表查得：
+
 $P(Z \leq -3.92) \approx 0.000045$
 
 因此：
+
 $p = 2 \times 0.000045 = 0.00009$
 
 ---
-
 ## c. 結論
 - 顯著水準 $\alpha = 0.01 \$。
 - 比較p-value 與 $\alpha \$：
   $p = 0.00009 < \alpha = 0.01$
 
-因此，我們拒絕虛無假設 $H_0$。這意味著數據提供了強有力的證據，表明實際比例與基因學家聲稱的 75% 不符。
+因此，我們拒絕 $H_0$。這意味著數據提供了強有力的證據，表明實際比例與基因學家聲稱的 75% 不符。
 
 ---
-
 ## 結果報告
-基於檢驗結果，紅色花瓣植物的實際比例顯著不同於基因學家聲稱的 75%。在顯著水準 $\alpha$ = 0.01 下，檢定統計量 z = -3.92 和 p-value 0.00009 表明結果具有高度統計顯著性。
-```
+基於檢驗結果，在$\alpha$ = 0.01 下，檢定統計量 z = -3.92 和 p-value 0.00009 ，紅色花瓣植物的實際比例顯著不同於基因學家聲稱的 75%。
