--- a/HW1123/HW1123Q11.md
+++ b/HW1123/HW1123Q11.md
@@ -75,11 +75,11 @@ $H_a$ : P > $\frac{2}{3}$
 
 將數據代入公式： Z*= $$\frac{0.82-0.6667}{\sqrt{\frac{0.6667*0.3333}{200}}}$$ = 4.599 ${\approx}$ 4.6
 
-我們希望計算右尾的累積機率 P(𝑍>4.60)，這就是 p 值。
+### 2.計算p-value
 
-### 2.計算P值
+計算右尾的累積機率 P(𝑍>4.60)。
 
-P-value=1−P(Z≤4.60)
+p-value=1−P(Z≤4.60)
 
 步驟：
 
@@ -91,7 +91,7 @@ P(Z≤4.60)≈0.999997
 
 p-value=1−0.999997=0.000003 < α=0.05 
 
-p 值 ≈0.000003 是一個極小的值，表明如果檢測計畫對存活率沒有影響( $H_0$成立)，觀察到樣本存活率 82% 或更高的機率幾乎為零。
+P 值 ≈0.000003 是一個極小的值，表明如果檢測計畫對存活率沒有影響( $H_0$成立)，觀察到樣本存活率 82% 或更高的機率幾乎為零。
 
 因此，我們有非常強的證據拒絕 $H_0$，並認為檢測計畫有效，提高了存活率。
 
