--- a/HW1123/13_陳峻毅/CH09.04_Q10.md
+++ b/HW1123/13_陳峻毅/CH09.04_Q10.md
@@ -53,4 +53,4 @@ $p = 2 \times 0.000045 = 0.00009$
 
 ---
 ## 結果報告
-基於檢驗結果，在$\alpha$ = 0.01 下，檢定統計量 z = -3.92 和 p-value 0.00009 ，紅色花瓣植物的實際比例顯著不同於基因學家聲稱的 75%。
+基於檢驗結果，在 $\alpha$ = 0.01$ 下，檢定統計量 z = -3.92 和 p-value 0.00009 ，紅色花瓣植物的實際比例顯著不同於基因學家聲稱的 75%。
