--- a/HW1123/HW1123Q07.md
+++ b/HW1123/HW1123Q07.md
@@ -21,6 +21,38 @@ $\hat{p}$, $\alpha$, $H_0$, $H_1$, $\frac{\bar{X}-\mu_0}{s/\sqrt{n}}$
 
 
 
+4.
+
+**Hypotheses**  
+H₀: P = 0.3  
+Hₐ: P < 0.3 (one-tailed test)  
+
+- n = 1000, x = 279  
+- Sample proportion:  
+  \[
+  \hat{p} = \frac{x}{n} = \frac{279}{1000} = 0.279
+  \]
+
+**Test Statistic Formula**:  
+\[
+z = \frac{\hat{p} - p_0}{\sqrt{p_0 (1 - p_0) / n}}
+\]
+
+**Calculation**:  
+\[
+z = \frac{0.279 - 0.3}{\sqrt{0.3(1 - 0.3) / 1000}}  
+   = \frac{-0.021}{\sqrt{0.00021}}  
+   = \frac{-0.021}{0.01449} \approx -1.45
+\]
+
+**P-value**:  
+\[
+P(Z < -1.45) \approx 0.0735
+\]
+
+Since **P-value > α = 0.05**, we fail to reject the null hypothesis, and there is insufficient evidence to support that **P < 0.3**.
+
+
 
 
 Github語法大全:
