--- a/HW1123/HW1123Q07.md
+++ b/HW1123/HW1123Q07.md
@@ -21,21 +21,15 @@ $H_a$: $p < 0.3$ (Left-tailed test)
 
 - n = 1000, x = 279  
 - Sample proportion:  
-  $$
-  \hat{p} = \frac{x}{n} = \frac{279}{1000} = 0.279
-  $$
+  $  \hat{p} = \frac{x}{n} = \frac{279}{1000} = 0.279$
 
 **Test Statistic Formula**:  
-$$
-z = \frac{\hat{p} - p_0}{\sqrt{p_0 (1 - p_0) / n}}
-$$
+$z = \frac{\hat{p} - p_0}{\sqrt{p_0 (1 - p_0) / n}}$
 
 **Calculation**:  
-$$
-z = \frac{0.279 - 0.3}{\sqrt{0.3(1 - 0.3) / 1000}}  
+$z = \frac{0.279 - 0.3}{\sqrt{0.3(1 - 0.3) / 1000}}  
    = \frac{-0.021}{\sqrt{0.00021}}  
-   = \frac{-0.021}{0.01449} \approx -1.45
-$$
+   = \frac{-0.021}{0.01449} \approx -1.45$
 
 **P-value**:  
 $$
